--- a/साल्वादर-द-मुंद.mw
+++ b/साल्वादर-द-मुंद.mw
@@ -55,3 +55,4 @@
 सगळ्यांत लागीं नोकरी करपी स्त्रियांचें सरकारी निवास (हॉस्टेल) PENHA DE FRANCA C T (४ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय वृद्धाश्रम CANDOLIM C T (४ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय खेळांगण PENHA DE FRANCA C T (४ किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी चित्रपटगृह PANAJI (८ किमी) हांगां आसा.
