--- a/सां_जुजे_द_आर्लें.mw
+++ b/सां_जुजे_द_आर्लें.mw
@@ -50,3 +50,5 @@
   सगळ्यांत लागीं खाजगी वेवसायीक प्रशिक्षण शाळा MARGAO (६ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी अनौपचारीक प्रशिक्षणकेंद्र  MARGAO (६ किमी) हांगां आसा.
   सगळ्यांत लागीं खाजगी अपंगां खातीर खाशेली शाळा MARGAO (६ किमी) हांगां आसा.
+== सुविधा ==
+  सगळ्यांत लागीं शासकीय अनाथाश्रम MARGAO (६ किमी) हांगां आसा.
