--- a/दुर्भाट.mw
+++ b/दुर्भाट.mw
@@ -42,3 +42,6 @@
 सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM C T) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वैवस्थापन  संस्था  (PANAJI) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं पॉलिटेक्निक (PANAJI) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (BANDORA C T) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (PONDA) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (QUELA C T) ५ किलोमिटरा परस कमी अंतराचेर आसा.
