--- a/सां_जुजे_द_आर्लें.mw
+++ b/सां_जुजे_द_आर्लें.mw
@@ -52,3 +52,5 @@
   सगळ्यांत लागीं खाजगी अपंगां खातीर खाशेली शाळा MARGAO (६ किमी) हांगां आसा.
 == सुविधा ==
   सगळ्यांत लागीं शासकीय अनाथाश्रम MARGAO (६ किमी) हांगां आसा.
+सगळ्यांत लागीं नोकरी करपी स्त्रियांचें सरकारी निवास (हॉस्टेल) PENHA DE FRANCA CT (४३ किमी) हांगां आसा.
+  सगळ्यांत लागीं शासकीय वृद्धाश्रम MARGAO (६ किमी) हांगां आसा.
