--- a/बेतकी.mw
+++ b/बेतकी.mw
@@ -175,7 +175,7 @@
 * हेर: ०
 
 == '''उत्पादन''' ==
-बेतकी ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाण): ARECANUTS,COUNTRY LIQUOR,RICE
+बेतकी ह्या गांवांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाण): ARECANUTS,COUNTRY LIQUOR,RICE
 [[वर्ग:[[उत्तर गोंय]]]]
 [[वर्ग:[[फोंडें]]]]
 [[वर्ग:[[उत्तर गोंय जिल्ल्यांतले गांव]]]]
