--- a/सां_जुजे_द_आर्लें.mw
+++ b/सां_जुजे_द_आर्लें.mw
@@ -54,3 +54,5 @@
   सगळ्यांत लागीं शासकीय अनाथाश्रम MARGAO (६ किमी) हांगां आसा.
 सगळ्यांत लागीं नोकरी करपी स्त्रियांचें सरकारी निवास (हॉस्टेल) PENHA DE FRANCA CT (४३ किमी) हांगां आसा.
   सगळ्यांत लागीं शासकीय वृद्धाश्रम MARGAO (६ किमी) हांगां आसा.
+सगळ्यांत लागीं शासकीय खेळांगण MARGAO (६ किमी) हांगां आसा.
+  सगळ्यांत लागीं खाजगी चित्रपटगृह MARGAO (६ किमी) हांगां आसा.
