--- a/Rumbrem.mw
+++ b/Rumbrem.mw
@@ -24,3 +24,7 @@
 }}
 
 == Rumbrem  ==
+Rumbrem हे दक्षिण गोवा जिल्ह्यातल्या सांगें तालुक्यातील ३८४ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात १३१ कुटुंबाचे व पुराय ६४६ लोकसंख्या आसा. हांगा लागीचे शार CURCHOREM-CACORA ६ किलोमीटर अंतरावर आसा. हांगा ३०० दादले आनीक ३४६ बायला आसा. हांगा अनुसूचित जातीचे लोक ११ आसून अनुसूचित जमातीचे ७ लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२६९८५  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
+
+
+== साक्षरताय ==
