--- a/साल्वादर-द-मुंद.mw
+++ b/साल्वादर-द-मुंद.mw
@@ -60,3 +60,4 @@
 शारांत १ शासकीय भौशीक ग्रंथालय आसा.
 
 उत्पादन
+साल्वादर-द-मुंद ह्या शारांत मुखा वयल्या वस्तूंचें उत्पादन जाता ( म्हत्वाच्या देंवत्या अनुक्रमान): GANESH IDOLS,WOODEN FURNITURE
