--- a/सां_जुजे_द_आर्लें.mw
+++ b/सां_जुजे_द_आर्लें.mw
@@ -58,3 +58,6 @@
   सगळ्यांत लागीं खाजगी चित्रपटगृह MARGAO (६ किमी) हांगां आसा.
 शारांत १ शासकीय सभाघर आसा.   
 ﻿शारांत १ शासकीय भौशीक ग्रंथालय  आसा.
+
+== उत्पादन ==
+सां जुजे द आर्लें ह्या शारांत मुखा वयल्या वस्तूंचें उत्पादन जाता ( म्हत्वाच्या देंवत्या अनुक्रमान): ALUMINIUM POWDER,CARBON,FISH PACKING
