--- a/Rumbrem.mw
+++ b/Rumbrem.mw
@@ -31,3 +31,6 @@ Rumbrem हे दक्षिण गोवा जिल्ह्यातल्
 * एकूण साक्षर लोकसंख्या: ४५०
 * साक्षर पुरुश लोकसंख्या: २२२ (७४.०%)
 * साक्षर स्त्री लोकसंख्या: २२८ (६५.९%)
+== शैक्षणिक सुविधा ==  
+सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (CURCHOREM-CACORA) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+﻿गांवांत १ शासकीय प्राथमिक शाळा आसा.
