--- a/Rumbrem.mw
+++ b/Rumbrem.mw
@@ -34,3 +34,5 @@ Rumbrem हे दक्षिण गोवा जिल्ह्यातल्
 == शैक्षणिक सुविधा ==  
 सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (CURCHOREM-CACORA) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 ﻿गांवांत १ शासकीय प्राथमिक शाळा आसा.
+सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (CURCHOREM-CACORA) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं माध्यमिक शाळा (SANVORDEM CT) ५ किलोमिटरा परस कमी अंतराचेर आसा.
