--- a/Rumbrem.mw
+++ b/Rumbrem.mw
@@ -36,3 +36,5 @@ Rumbrem हे दक्षिण गोवा जिल्ह्यातल्
 ﻿गांवांत १ शासकीय प्राथमिक शाळा आसा.
 सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (CURCHOREM-CACORA) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं माध्यमिक शाळा (SANVORDEM CT) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं उच्च माध्यमिक शाळा (CURCHOREM-CACORA) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं पदवी महाविद्यालय (QUEPEM) १० किलोमिटर परस चड अंतराचेर आसा.
