--- a/Rumbrem.mw
+++ b/Rumbrem.mw
@@ -38,3 +38,5 @@ Rumbrem हे दक्षिण गोवा जिल्ह्यातल्
 सगळ्यांत लागीं माध्यमिक शाळा (SANVORDEM CT) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं उच्च माध्यमिक शाळा (CURCHOREM-CACORA) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 सगळ्यांत लागीं पदवी महाविद्यालय (QUEPEM) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (BANDORA CT) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM CT) १० किलोमिटर परस चड अंतराचेर आसा.
