/* = वैजकी सुविधा (अशासकीय) */

--- a/दुर्भाट.mw
+++ b/दुर्भाट.mw
@@ -58,5 +58,7 @@
 सगळ्यांत लागीं पशुवैजकी रुग्णालय ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 सगळ्यांत लागीं कुटुंब कल्याणकेंद्र ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 
-== वैजकी सुविधा (अशासकीय) =
+== वैजकी सुविधा (अशासकीय) ==
 ﻿गांवांत १ पिढीजात वैद्य आसा.
+
+== पिवपाचे उदक ==
