--- a/शिरदोण.mw
+++ b/शिरदोण.mw
@@ -27,4 +27,4 @@
 गांवांत एटीएम उपलब्ध ना.सगळ्यांत लागीं एटीएम ५ किलोमिटरा परस कमी अंतराचेर आसा. गांवांत वेपाराविशी सावकारी पेडी उपलब्ध आसा. गांवांत सहकारी सावकारी पेडी उपलब्ध ना.सगळ्यांत लागीं सहकारी सावकारी पेडी ५ ते १० किलोमिटराच्या अंतराचेर आसा. गांवांत शेतकी कर्ज संस्था उपलब्ध ना.सगळ्यांत लागीं शेतकी कर्ज संस्था ५ ते १० किलोमिटराच्या अंतराचेर आसा. गांवांत स्वयंसहाय्य गट उपलब्ध ना.सगळ्यांत लागीं स्वयंसहाय्य गट ५ किलोमिटरा परस कमी अंतराचेर आसा. गांवांत रेशन मांड उपलब्ध आसा. गांवांत मंडी / कायमचे बाजार उपलब्ध आसा. गांवांत आठवडयाचो बाजार उपलब्ध ना. सगळ्यांत लागीं आठवडयाचो बाजार ५ किलोमिटरा परस कमी अंतराचेर आसा. गांवांत कृषी उत्पन्न बाजार समिती उपलब्ध ना. सगळ्यांत लागीं कृषी उत्पन्न बाजार समिती १० किलोमिटर परस चड अंतराचेर आसा.
 
 == '''आरोग्य आरोग्य, पोषण आहार आनी मनोरंजन सुविधा''' ==
-गांवांत एकात्मिक बाल विकास योजना (पोषण आहार केंद्र) उपलब्ध ना. सगळ्यांत लागीं एकात्मिक बाल विकास योजना (पोषण आहार केंद्र) ५ ते १० किलोमिटराच्या अंतराचेर आसा. गांवांत बालवाडी (पोषण आहार केंद्र) उपलब्ध आसा. सगळ्यांत लागीं पोस्ट आनीक तार ऑफीस १० किलोमिटर परस चड अंतराचेर आसा. गावाचो पीन कोड ४०३१०८ आसा. गांवांत दूरध्वनी उपलब्ध आसा. गांवांत सार्वजनीक दूरध्वनी केंद्र उपलब्ध आसा. गांवांत सार्वजनीक दूरध्वनी केंद्र उपलब्ध आसा. गांवांत मोबाईल फोन सुवीधा उपलब्ध आसा. गांवांत इंटरनेट सुवीधा उपलब्ध ना.सगळ्यांत लागीं इंटरनेट सुवीधा ५ किलोमिटरा परस कमी अंतराचेर आसा.  गांवांत खाजगी कूरियर उपलब्ध ना.सगळ्यांत लागीं खाजगी कूरियर १० किलोमिटर परस चड अंतराचेर आसा. गांवांत शासकीय बस सेवा उपलब्ध आसा. गांवांत खाजगी बस सेवा उपलब्ध आसा. गांवांत रेल्वे स्थानक उपलब्ध ना.सगळ्यांत लागीं रेल्वे स्थानक १० किलोमिटर परस चड अंतराचेर आसा. गांवांत ऑटोरिक्षा व टमटम उपलब्ध ना.सगळ्यांत लागीं ऑटोरिक्षा व टमटम ५ ते १० किलोमिटराच्या अंतराचेर आसा. गांवांत टॅक्सी उपलब्ध आसा. गांवांत व्हॅन उपलब्ध आसा.
+गांवांत एकात्मिक बाल विकास योजना (पोषण आहार केंद्र) उपलब्ध ना. सगळ्यांत लागीं एकात्मिक बाल विकास योजना (पोषण आहार केंद्र) ५ ते १० किलोमिटराच्या अंतराचेर आसा. गांवांत बालवाडी (पोषण आहार केंद्र) उपलब्ध आसा. सगळ्यांत लागीं पोस्ट आनीक तार ऑफीस १० किलोमिटर परस चड अंतराचेर आसा. गावाचो पीन कोड ४०३१०८ आसा. गांवांत दूरध्वनी उपलब्ध आसा. गांवांत सार्वजनीक दूरध्वनी केंद्र उपलब्ध आसा. गांवांत सार्वजनीक दूरध्वनी केंद्र उपलब्ध आसा. गांवांत मोबाईल फोन सुवीधा उपलब्ध आसा. गांवांत इंटरनेट सुवीधा उपलब्ध ना.सगळ्यांत लागीं इंटरनेट सुवीधा ५ किलोमिटरा परस कमी अंतराचेर आसा.  गांवांत खाजगी कूरियर उपलब्ध ना.सगळ्यांत लागीं खाजगी कूरियर १० किलोमिटर परस चड अंतराचेर आसा. गांवांत शासकीय बस सेवा उपलब्ध आसा. गांवांत खाजगी बस सेवा उपलब्ध आसा. गांवांत रेल्वे स्थानक उपलब्ध ना.सगळ्यांत लागीं रेल्वे स्थानक १० किलोमिटर परस चड अंतराचेर आसा. गांवांत ऑटोरिक्षा व टमटम उपलब्ध ना.सगळ्यांत लागीं ऑटोरिक्षा व टमटम ५ ते १० किलोमिटराच्या अंतराचेर आसा. गांवांत टॅक्सी उपलब्ध आसा. गांवांत व्हॅन उपलब्ध आसा. गांवांत ट्रॅक्टर उपलब्ध ना. गांवांत सायकल रिक्षा (पायचाकी) उपलब्ध ना.
