--- a/Rumbrem.mw
+++ b/Rumbrem.mw
@@ -44,3 +44,8 @@ Rumbrem हे दक्षिण गोवा जिल्ह्यातल्
 सगळ्यांत लागीं पॉलिटेक्निक (CURCHOREM-CACORA) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (CURCHOREM-CACORA) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (QUELA-CT) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+ 
+
+
+== वैजकी सुविधा (शासकीय) ==
