--- a/Rumbrem.mw
+++ b/Rumbrem.mw
@@ -49,3 +49,5 @@ Rumbrem हे दक्षिण गोवा जिल्ह्यातल्
 
 
 == वैजकी सुविधा (शासकीय) ==
+सगळ्यांत लागीं समाजिक आरोग्य केंद्र ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं प्राथमिक आरोग्य केंद्र ५ ते १० किलोमिटराच्या अंतराचेर आसा.
