--- a/Rumbrem.mw
+++ b/Rumbrem.mw
@@ -60,3 +60,17 @@ Rumbrem हे दक्षिण गोवा जिल्ह्यातल्
 सगळ्यांत लागीं पशुवैजकी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा.
 
 सगळ्यांत लागीं कुटुंब कल्याणकेंद्र १० किलोमिटर परस चड अंतराचेर आसा.
+
+== वैजकी सुविधा (अशासकीय) ==
+
+
+
+
+
+
+
+
+
+
+
+== पिवपाचे उदक ==
