--- a/Rumbrem.mw
+++ b/Rumbrem.mw
@@ -74,3 +74,5 @@ Rumbrem हे दक्षिण गोवा जिल्ह्यातल्
 
 
 == पिवपाचे उदक ==
+गांवांत शुद्धीकरण केल्लें नळाचें उदक पुरवण आसा.
+गांवांत शुद्धीकरण करूंक नशिल्लें उदक पुरवण आसा.
