*Empty MediaWiki Message*

--- a/खेडें.mw
+++ b/खेडें.mw
@@ -24,7 +24,7 @@
 }}
 
 == खेडें (६२६९६०) ==
-खेडें हे दक्षिण गोवा जिल्ह्यातल्या केपें तालुक्यातले ७८६ हेक्टर क्षेत्राचो गाव आसून २०११ च्या जनगणनेप्रमाण ह्या गांवांत ८६ कुटुंबाचे व पुराय ४१४ लोकसंख्या आसा. हांगा लागीचे शार कुंकळे ८ किलोमीटर अंतराचेर आसा. हांगा २१२ दादले आनीक २०२ बायलां आसा. हांगा अनुसूचित जातीचे लोक ३२ आसून अनुसूचित जमातीचे ३२३ लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२६९६०  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
+खेडें हे दक्षिण गोवा जिल्ह्यातल्या केपें तालुक्यातले ७८६ हेक्टर क्षेत्राचो गाव आसून २०११ च्या जनगणनेप्रमाण ह्या गांवांत ८६ कुटुंबाचे व पुराय ४१४ लोकसंख्या आसा. हांगा लागीचे शार कुंकळे ८ किलोमीटर अंतराचेर आसा. हांगा २१२ दादले आनीक २०२ बायलां आसा. हांगा अनुसूचित जातीचे लोक ३२ आसून अनुसूचित जमातीचे ३२३ लोक आसात. ह्या गांवचो जनगणनेतलो स्थल निर्देशांक ६२६९६०  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
 
 == साक्षरताय ==  
 * एकूण साक्षर लोकसंख्या: २८९
@@ -36,15 +36,15 @@
 ﻿गांवांत १ शासकीय प्राथमिक शाळा आसा. 
  सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (PADI) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
  सगळ्यांत लागीं माध्यमिक शाळा (PADI) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
- सगळ्यांत लागीं उच्च माध्यमिक शाळा (BALI) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
- सगळ्यांत लागीं पदवी महाविद्यालय (CUNCOLIM) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं उच्च माध्यमिक शाळा (बाळी) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+ सगळ्यांत लागीं पदवी महाविद्यालय (कुंकळे) १० किलोमिटर परस चड अंतराचेर आसा.
  सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (VERNA CT) १० किलोमिटर परस चड अंतराचेर आसा.
  सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM CT) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं वैवस्थापन  संस्था  (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं वैवस्थापन  संस्था  (मडगांव) १० किलोमिटर परस चड अंतराचेर आसा.
  सगळ्यांत लागीं पॉलिटेक्निक (CURCHOREM-CACORA) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (मडगांव) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (मडगांव) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (मडगांव) १० किलोमिटर परस चड अंतराचेर आसा.
 
 == वैजकी सुविधा (शासकीय) ==
 सगळ्यांत लागीं समाजिक आरोग्य केंद्र ५ ते १० किलोमिटराच्या अंतराचेर आसा.
