--- a/Rumbrem.mw
+++ b/Rumbrem.mw
@@ -80,3 +80,5 @@ Rumbrem हे दक्षिण गोवा जिल्ह्यातल्
 गांवांत उघड्या बांयचें उदक पुरवण आसा.
 गांवांत हॅन्डपंपचें उदक पुरवण ना.
 गांवांत ट्यूबवेलच्या/बोअरवेलाचो उदक पुरवण ना.
+गांवांत झरीचें उदक पुरवण ना.
+गांवांत न्हय/खाजनाचें उदक पुरवण ना.
