--- a/Rumbrem.mw
+++ b/Rumbrem.mw
@@ -82,3 +82,5 @@ Rumbrem हे दक्षिण गोवा जिल्ह्यातल्
 गांवांत ट्यूबवेलच्या/बोअरवेलाचो उदक पुरवण ना.
 गांवांत झरीचें उदक पुरवण ना.
 गांवांत न्हय/खाजनाचें उदक पुरवण ना.
+गांवांत तळी/कोंड उदक पुरवण आसा.
+गांवांत अन्य पद्धतीचे उदक पुरवण ना.
