--- a/Rumbrem.mw
+++ b/Rumbrem.mw
@@ -84,3 +84,5 @@ Rumbrem हे दक्षिण गोवा जिल्ह्यातल्
 गांवांत न्हय/खाजनाचें उदक पुरवण ना.
 गांवांत तळी/कोंड उदक पुरवण आसा.
 गांवांत अन्य पद्धतीचे उदक पुरवण ना.
+== नितळसाण ==
+गांवांत बंद गटार उपलब्ध ना.
