--- a/Rumbrem.mw
+++ b/Rumbrem.mw
@@ -86,3 +86,5 @@ Rumbrem हे दक्षिण गोवा जिल्ह्यातल्
 गांवांत अन्य पद्धतीचे उदक पुरवण ना.
 == नितळसाण ==
 गांवांत बंद गटार उपलब्ध ना.
+गांवांत उघडें गटार उपलब्ध आसा.
+नीट जलस्त्रोतांत सोडिल्ले सांड उदक
