--- a/Rumbrem.mw
+++ b/Rumbrem.mw
@@ -88,3 +88,5 @@ Rumbrem हे दक्षिण गोवा जिल्ह्यातल्
 गांवांत बंद गटार उपलब्ध ना.
 गांवांत उघडें गटार उपलब्ध आसा.
 नीट जलस्त्रोतांत सोडिल्ले सांड उदक
+हें क्षेत्र पुराय तरेन स्वच्छता अभियानांत ना
+गांवांत न्हाणीघर आनी सार्वजनिक स्वच्छता घर  उपलब्ध ना.
