--- a/Rumbrem.mw
+++ b/Rumbrem.mw
@@ -98,3 +98,5 @@ Rumbrem हे दक्षिण गोवा जिल्ह्यातल्
 गांवांत पोस्ट ऑफीस उपलब्ध ना.सगळ्यांत लागीं पोस्ट ऑफीस ५ किलोमिटरा परस कमी अंतराचेर आसा.
 गांवांत उपपोस्ट ऑफीस उपलब्ध ना.सगळ्यांत लागीं उपपोस्ट ऑफीस ५ किलोमिटरा परस कमी अंतराचेर आसा.
 गांवांत पोस्ट आनीक तार ऑफीस उपलब्ध ना.सगळ्यांत लागीं पोस्ट आनीक तार ऑफीस ५ किलोमिटरा परस कमी अंतराचेर आसा.
+गावाचो पीन कोड ४०६७०३  आसा.
+गांवांत दूरध्वनी उपलब्ध आसा.
