--- a/दुर्भाट.mw
+++ b/दुर्भाट.mw
@@ -99,3 +99,5 @@
 गांवांत रेल्वे स्थानक उपलब्ध ना.सगळ्यांत लागीं रेल्वे स्थानक १० किलोमिटर परस चड अंतराचेर आसा.
 गांवांत ऑटोरिक्षा व टमटम उपलब्ध आसा.
 गांवांत टॅक्सी उपलब्ध ना.सगळ्यांत लागीं टॅक्सी ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत व्हॅन उपलब्ध आसा.
+गांवांत ट्रॅक्टर उपलब्ध ना.
