--- a/Rumbrem.mw
+++ b/Rumbrem.mw
@@ -100,3 +100,5 @@ Rumbrem हे दक्षिण गोवा जिल्ह्यातल्
 गांवांत पोस्ट आनीक तार ऑफीस उपलब्ध ना.सगळ्यांत लागीं पोस्ट आनीक तार ऑफीस ५ किलोमिटरा परस कमी अंतराचेर आसा.
 गावाचो पीन कोड ४०६७०३  आसा.
 गांवांत दूरध्वनी उपलब्ध आसा.
+गांवांत सार्वजनीक दूरध्वनी केंद्र उपलब्ध आसा.
+गांवांत मोबाईल फोन सुवीधा उपलब्ध आसा.
