--- a/शिरदोण.mw
+++ b/शिरदोण.mw
@@ -30,4 +30,4 @@
 गांवांत एकात्मिक बाल विकास योजना (पोषण आहार केंद्र) उपलब्ध ना. सगळ्यांत लागीं एकात्मिक बाल विकास योजना (पोषण आहार केंद्र) ५ ते १० किलोमिटराच्या अंतराचेर आसा. गांवांत बालवाडी (पोषण आहार केंद्र) उपलब्ध आसा. सगळ्यांत लागीं पोस्ट आनीक तार ऑफीस १० किलोमिटर परस चड अंतराचेर आसा. गावाचो पीन कोड ४०३१०८ आसा. गांवांत दूरध्वनी उपलब्ध आसा. गांवांत सार्वजनीक दूरध्वनी केंद्र उपलब्ध आसा. गांवांत सार्वजनीक दूरध्वनी केंद्र उपलब्ध आसा. गांवांत मोबाईल फोन सुवीधा उपलब्ध आसा. गांवांत इंटरनेट सुवीधा उपलब्ध ना.सगळ्यांत लागीं इंटरनेट सुवीधा ५ किलोमिटरा परस कमी अंतराचेर आसा.  गांवांत खाजगी कूरियर उपलब्ध ना.सगळ्यांत लागीं खाजगी कूरियर १० किलोमिटर परस चड अंतराचेर आसा. गांवांत शासकीय बस सेवा उपलब्ध आसा. गांवांत खाजगी बस सेवा उपलब्ध आसा. गांवांत रेल्वे स्थानक उपलब्ध ना.सगळ्यांत लागीं रेल्वे स्थानक १० किलोमिटर परस चड अंतराचेर आसा. गांवांत ऑटोरिक्षा व टमटम उपलब्ध ना.सगळ्यांत लागीं ऑटोरिक्षा व टमटम ५ ते १० किलोमिटराच्या अंतराचेर आसा. गांवांत टॅक्सी उपलब्ध आसा. गांवांत व्हॅन उपलब्ध आसा. गांवांत ट्रॅक्टर उपलब्ध ना. गांवांत सायकल रिक्षा (पायचाकी) उपलब्ध ना. गांवांत सायकल रिक्षा (यांत्रिक) उपलब्ध ना. गांवांत बैल आनी अन्य जनावरांनी ओढिल्ली गाडी उपलब्ध ना. गांवांत समुद्र/नदी बोट सेवा उपलब्ध ना.सगळ्यांत लागीं समुद्र/नदी बोट सेवा १० किलोमिटर परस चड अंतराचेर आसा. राष्ट्रीय महामार्ग गांवाक जोडला. राज्य महामार्ग गांवाक जोडूंक ना.सगळ्यांत लागीं राज्य महामार्ग १० किलोमिटर परस चड अंतराचेर आसा. जिल्ल्यातलो मुखेल रस्तो गांवाक जोडला. जिल्ल्यातलो अन्य रस्तो गांवाक जोडला. सगळ्यांत लागीं वाहतुकी करपासारखो जलमार्ग ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 
 == '''बाजार आनी सावकारी पेडी''' ==
-गांवांत एटीएम उपलब्ध ना.सगळ्यांत लागीं एटीएम ५ किलोमिटरा परस कमी अंतराचेर आसा.
+गांवांत एटीएम उपलब्ध ना.सगळ्यांत लागीं एटीएम ५ किलोमिटरा परस कमी अंतराचेर आसा. गांवांत वेपाराविशी सावकारी पेडी उपलब्ध आसा.
