--- a/दुर्भाट.mw
+++ b/दुर्भाट.mw
@@ -111,3 +111,5 @@
 जिल्ल्यातलो अन्य रस्तो गांवाक जोडूंक ना.सगळ्यांत लागीं जिल्ल्यातलो अन्य रस्तो ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 
 == बाजार आनी सावकारी पेडी ==
+गांवांत एटीएम उपलब्ध ना.सगळ्यांत लागीं एटीएम ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत वेपाराविशी सावकारी पेडी उपलब्ध ना.सगळ्यांत लागीं वेपाराविशी सावकारी पेडी ५ ते १० किलोमिटराच्या अंतराचेर आसा.
