--- a/तांबशें.mw
+++ b/तांबशें.mw
@@ -24,4 +24,4 @@
 }}
 
 == तांबशें (६२६६४५) ==
-तांबशें हे उत्तर गोवा जिल्ह्यातल्या
+तांबशें हे उत्तर गोवा जिल्ह्यातल्या पेडणें तालुक्यातील १५३.६२ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात १३८ कुटुंबाचे व पुराय ५९१ लोकसंख्या आसा.
