--- a/Rumbrem.mw
+++ b/Rumbrem.mw
@@ -152,3 +152,5 @@ Rumbrem हे दक्षिण गोवा जिल्ह्यातल्
 
 
 == वीज ==
+२४ वरां वीज पुरवण घरगुती कामाखा तीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा.
+२४ वरां वीज पुरवण घरगुती कामाखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
