--- a/दुर्भाट.mw
+++ b/दुर्भाट.mw
@@ -149,3 +149,5 @@
 == जमिनीचो वापर ==
 दुर्भाट ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
 * रान  : ०
+* शेतकामा खातीर ना वापरिल्ली जमीन: ०
+* ओसाड आनी लागवड ना केल्ली जमीन: ०
