--- a/दुर्भाट.mw
+++ b/दुर्भाट.mw
@@ -153,3 +153,5 @@
 * ओसाड आनी लागवड ना केल्ली जमीन: ०
 * कुरणे आनी अन्य मळ: ०
 * विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: ०
+* लागवडयोग्य पडीक जमीन: ३१.२
+* कायमस्वरूपी पडीक जमीन: ०
