--- a/Rumbrem.mw
+++ b/Rumbrem.mw
@@ -163,3 +163,5 @@ Rumbrem हे दक्षिण गोवा जिल्ह्यातल्
 == जमिनीचो वापर ==
 Rumbrem ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
 * रान  : ०
+* शेतकामा खातीर ना वापरिल्ली जमीन: ५५
+* ओसाड आनी लागवड ना केल्ली जमीन: ०
