--- a/दुर्भाट.mw
+++ b/दुर्भाट.mw
@@ -169,3 +169,4 @@
 * हेर: ०
 
 == उत्पादन ==
+दुर्भाट ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): ARECANUTS,BACKERY PRODUCTS,COCONUTS,COUNTRY LIQUOR
