--- a/दुर्भाट.mw
+++ b/दुर्भाट.mw
@@ -170,3 +170,9 @@
 
 == उत्पादन ==
 दुर्भाट ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): ARECANUTS,BACKERY PRODUCTS,COCONUTS,COUNTRY LIQUOR
+
+[[Category:devanagari]]	
+[[Category:गोंय़]]
+[[Category:उत्तर गोंय]]
+[[Category:गोंयचीं शारां आनी जागे]]
+== संदर्भ ==
