--- a/तांबशें.mw
+++ b/तांबशें.mw
@@ -32,3 +32,10 @@
 शैक्षणिक सुविधा
 गांवांत १ शासकीय पूर्व-प्राथमिक शाळा आसा. 
 ﻿गांवांत १ शासकीय प्राथमिक शाळा आसा.
+सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (TORXEM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+ सगळ्यांत लागीं माध्यमिक शाळा (TORXEM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+ सगळ्यांत लागीं उच्च माध्यमिक शाळा (PERNEM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+ सगळ्यांत लागीं पदवी महाविद्यालय (PERNEM RURAL) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+ सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (BANDORA C T) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM C T) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं वैवस्थापन  संस्था  (PENHA-DE-FRANCA C T) १० किलोमिटर परस चड अंतराचेर आसा.
