*Empty MediaWiki Message*

--- a/कुडका.mw
+++ b/कुडका.mw
@@ -24,3 +24,4 @@
 }}
 
 == कुडका ==
+कुडका हे उत्तर गोवा जिल्ह्यातल्या तिसवाडी तालुक्यातील २७०.१ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात ५६० कुटुंबाचे व पुराय २५१८ लोकसंख्या आसा.
