--- a/कुडसें.mw
+++ b/कुडसें.mw
@@ -113,3 +113,7 @@
 गांवांत आठवडयाचो बाजार उपलब्ध आसा.
 गांवांत कृषी उत्पन्न बाजार समिती उपलब्ध आसा.
 == आरोग्य आरोग्य, पोषण आहार आनी मनोरंजन सुविधा ==
+गांवांत एकात्मिक बाल विकास योजना (पोषण आहार केंद्र) उपलब्ध ना.सगळ्यांत लागीं एकात्मिक बाल विकास योजना (पोषण आहार केंद्र) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+गांवांत बालवाडी (पोषण आहार केंद्र) उपलब्ध आसा.
+गांवांत इतर पोषण आहार केंद्र उपलब्ध आसा.
+गांवांत 'आशा' कर्मचारी उपलब्ध आसा.
