--- a/कुडका.mw
+++ b/कुडका.mw
@@ -32,5 +32,7 @@
 * साक्षर स्त्री लोकसंख्या: ९३८ (७२.९४%)
 
 == शैक्षणिक सुविधा ==
- सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (GOAVELHA C T) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (GOAVELHA C T) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 गांवांत २ शासकीय प्राथमिक शाळा आसा.
+﻿गांवांत १ शासकीय कनिष्ठ माध्यमिक शाळा  आसा. 
+सगळ्यांत लागीं माध्यमिक शाळा (GOAVELHA C T) ५ किलोमिटरा परस कमी अंतराचेर आसा.
