--- a/कुडका.mw
+++ b/कुडका.mw
@@ -36,3 +36,5 @@
 गांवांत २ शासकीय प्राथमिक शाळा आसा.
 ﻿गांवांत १ शासकीय कनिष्ठ माध्यमिक शाळा  आसा. 
 सगळ्यांत लागीं माध्यमिक शाळा (GOAVELHA C T) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं उच्च माध्यमिक शाळा (GOAVELHA C T) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं पदवी महाविद्यालय (GOAVELHA C T) ५ किलोमिटरा परस कमी अंतराचेर आसा.
