--- a/कुडका.mw
+++ b/कुडका.mw
@@ -38,3 +38,5 @@
 सगळ्यांत लागीं माध्यमिक शाळा (GOAVELHA C T) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं उच्च माध्यमिक शाळा (GOAVELHA C T) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं पदवी महाविद्यालय (GOAVELHA C T) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (VERNA C T) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM C T) ५ किलोमिटरा परस कमी अंतराचेर आसा.
