--- a/शिरवय.mw
+++ b/शिरवय.mw
@@ -24,3 +24,7 @@
 }}
 
 == शिरवय  ==
+शिरवय हे दक्षिण गोवा जिल्ह्यातल्या केपें तालुक्यातील १२०० हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात २८१ कुटुंबाचे व पुराय ११२९ लोकसंख्या आसा. हांगा लागीचे शार QUEPEM ३ किलोमीटर अंतरावर आसा. हांगा ५५९ दादले आनीक ५७० बायला आसा. हांगा अनुसूचित जातीचे लोक ६ आसून अनुसूचित जमातीचे ३७५ लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२६९४१  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
+
+
+== साक्षरताय ==
