--- a/कुडका.mw
+++ b/कुडका.mw
@@ -40,3 +40,5 @@
 सगळ्यांत लागीं पदवी महाविद्यालय (GOAVELHA C T) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (VERNA C T) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM C T) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं वैवस्थापन  संस्था  (PANAJI) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं पॉलिटेक्निक (PANAJI) १० किलोमिटर परस चड अंतराचेर आसा.
