--- a/कुडका.mw
+++ b/कुडका.mw
@@ -42,3 +42,6 @@
 सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM C T) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं वैवस्थापन  संस्था  (PANAJI) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं पॉलिटेक्निक (PANAJI) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (PANAJI) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (PANAJI) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (PENHA-DE-FRANCA C T) १० किलोमिटर परस चड अंतराचेर आसा.
