--- a/कुडसें.mw
+++ b/कुडसें.mw
@@ -138,3 +138,5 @@
 == जमिनीचो वापर ==
 कुडसें ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
 * रान  : ४०.५७
+* शेतकामा खातीर ना वापरिल्ली जमीन: ०
+* ओसाड आनी लागवड ना केल्ली जमीन: ३४.३३
