--- a/शिरवय.mw
+++ b/शिरवय.mw
@@ -31,3 +31,5 @@
 * एकूण साक्षर लोकसंख्या: ८३२
 * साक्षर पुरुश लोकसंख्या: ४३९ (७८.५३%)
 * साक्षर स्त्री लोकसंख्या: ३९३ (६८.९५%)
+== शैक्षणिक सुविधा ==  
+सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (QUEPEM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
