--- a/कुडसें.mw
+++ b/कुडसें.mw
@@ -140,3 +140,6 @@
 * रान  : ४०.५७
 * शेतकामा खातीर ना वापरिल्ली जमीन: ०
 * ओसाड आनी लागवड ना केल्ली जमीन: ३४.३३
+* कुरणे आनी अन्य मळ: ०
+* विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: ०
+* लागवडयोग्य पडीक जमीन: ४१.८६
