--- a/शिरवय.mw
+++ b/शिरवय.mw
@@ -33,3 +33,5 @@
 * साक्षर स्त्री लोकसंख्या: ३९३ (६८.९५%)
 == शैक्षणिक सुविधा ==  
 सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (QUEPEM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं प्राथमिक शाळा (XELDEM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (XELDEM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
