--- a/शिरवय.mw
+++ b/शिरवय.mw
@@ -35,3 +35,5 @@
 सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (QUEPEM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं प्राथमिक शाळा (XELDEM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (XELDEM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं माध्यमिक शाळा (QUEPEM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं उच्च माध्यमिक शाळा (QUEPEM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
