--- a/शिरवय.mw
+++ b/शिरवय.mw
@@ -37,3 +37,5 @@
 सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (XELDEM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं माध्यमिक शाळा (QUEPEM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं उच्च माध्यमिक शाळा (QUEPEM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं पदवी महाविद्यालय (QUEPEM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (VERNA CT) १० किलोमिटर परस चड अंतराचेर आसा.
