--- a/कुडसें.mw
+++ b/कुडसें.mw
@@ -149,3 +149,9 @@
 * एकूण कोरड व्हांवपी जमीन: २४६.९
 * एकूण बागायत जमीन: २.०४
 == शिंपणावळ सुविधा ==
+शिंपणावळ करपा खातीर स्रोत अशे आसात (क्षेत्रफळ हेक्टरांनी) :
+* कालवे: ०
+* बांयो / कूप नलिका: ०
+* तळी: ०
+* ओढे: ०
+* हेर: २.०४
