--- a/कुडका.mw
+++ b/कुडका.mw
@@ -59,3 +59,4 @@
 सगळ्यांत लागीं कुटुंब कल्याणकेंद्र ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 
 == वैजकी सुविधा (अशासकीय) ==
+﻿गांवांत १ एमबीबीएस पदवीधर वैजकी वेवसायी आसा.
