--- a/कुडसें.mw
+++ b/कुडसें.mw
@@ -156,3 +156,4 @@
 * ओढे: ०
 * हेर: २.०४
 == उत्पादन ==
+कुडसें ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): CASHEW NUTS,COUNTRY LIQUOR,WOODEN FURNITURE
