--- a/तांबशें.mw
+++ b/तांबशें.mw
@@ -47,6 +47,16 @@
 सगळ्यांत लागीं समाजिक आरोग्य केंद्र १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं प्राथमिक आरोग्य केंद्र ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 ﻿गांवांत १ प्राथमिक आरोग्य उपकेंद्र  आसा.
+गांवांत बंद गटार उपलब्ध ना.
+गांवांत उघडें गटार उपलब्ध आसा.
+नीट जलस्त्रोतांत सोडिल्ले सांड उदक
+हें क्षेत्र पुराय तरेन स्वच्छता अभियानांत ना
+गांवांत न्हाणीघर आनी सार्वजनिक स्वच्छता घर  उपलब्ध ना.
+गांवांत न्हाणीघर सोडून सार्वजनिक स्वच्छता घर उपलब्ध ना.
+गांवांत ग्रामीण उत्पादक केंद्रे ना जाल्यार सॅनिटरी हार्डवेअर मांड उपलब्ध ना.
+गांवांत ग्रामीण सॅनिटरी हार्डवेअर मांड उपलब्ध ना.
+गांवांत सामूहिक बायोगॅस ना जाल्यार उत्पादक पुनर्वापराची वेवस्था उपलब्ध ना.
+
 गांवांत १ कुटुंब कल्याणकेंद्र आसा.
 सगळ्यांत लागीं प्रसूति आनी बालकल्याण केंद्र १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं क्षयरोग उपचार केंद्र  १० किलोमिटर परस चड अंतराचेर आसा.
