--- a/खोतोडें.mw
+++ b/खोतोडें.mw
@@ -30,3 +30,5 @@
 * साक्षर पुरुश लोकसंख्या: २९२ (८७.६९%)
 * साक्षर स्त्री लोकसंख्या: २११ (७२.५१%)
 == शैक्षणिक सुविधा ==
+सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (BIRONDEM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत ३ शासकीय प्राथमिक शाळा आसा. ﻿गांवांत १ खाजगी प्राथमिक शाळा आसा.
