--- a/खोतोडें.mw
+++ b/खोतोडें.mw
@@ -33,3 +33,5 @@
 सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (BIRONDEM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 गांवांत ३ शासकीय प्राथमिक शाळा आसा. ﻿गांवांत १ खाजगी प्राथमिक शाळा आसा.
 गांवांत १ शासकीय कनिष्ठ माध्यमिक शाळा  आसा.
+सगळ्यांत लागीं माध्यमिक शाळा (CODQUI) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+ सगळ्यांत लागीं उच्च माध्यमिक शाळा (VALPOI) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
