--- a/खोतोडें.mw
+++ b/खोतोडें.mw
@@ -67,3 +67,6 @@
 गांवांत तळी/कोंड उदक पुरवण आसा.
 गांवांत अन्य पद्धतीचे उदक पुरवण ना.
 == नितळसाण ==
+गांवांत बंद गटार उपलब्ध ना.
+गांवांत उघडें गटार उपलब्ध ना.
+नीट जलस्त्रोतांत सोडिल्ले सांड उदक
