--- a/शिरवय.mw
+++ b/शिरवय.mw
@@ -151,3 +151,6 @@
 == जमिनीचो वापर ==
 शिरवय ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
 * रान  : ३०७.२
+* शेतकामा खातीर ना वापरिल्ली जमीन: ९५.५
+* ओसाड आनी लागवड ना केल्ली जमीन: ०
+* कुरणे आनी अन्य मळ: ०
