--- a/शिरवय.mw
+++ b/शिरवय.mw
@@ -154,3 +154,6 @@
 * शेतकामा खातीर ना वापरिल्ली जमीन: ९५.५
 * ओसाड आनी लागवड ना केल्ली जमीन: ०
 * कुरणे आनी अन्य मळ: ०
+* विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: ०
+* लागवडयोग्य पडीक जमीन: ४८५.३
+* कायमस्वरूपी पडीक जमीन: ०
