--- a/कुडका.mw
+++ b/कुडका.mw
@@ -171,3 +171,4 @@
 
 
 == उत्पादन ==
+कुडका ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): CASHEW NUTS,COUNTRY LIQUOR,VEGETABLES
