--- a/तांबशें.mw
+++ b/तांबशें.mw
@@ -29,7 +29,7 @@
 * एकूण साक्षर लोकसंख्या: ४७८
 * साक्षर पुरुश लोकसंख्या: २६३ (८७.३८%)
 * साक्षर स्त्री लोकसंख्या: २१५ (७४.१४%)
-शैक्षणिक सुविधा
+== साक्षरताय == 
 गांवांत १ शासकीय पूर्व-प्राथमिक शाळा आसा. 
 ﻿गांवांत १ शासकीय प्राथमिक शाळा आसा.
 सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (TORXEM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
