--- a/शिरवय.mw
+++ b/शिरवय.mw
@@ -161,3 +161,11 @@
 * पिकां सकयली जमीन: ३१२
 * एकूण कोरड व्हांवपी जमीन: ३००
 * एकूण बागायत जमीन: १२
+
+== शिंपणावळ सुविधा ==
+शिंपणावळ करपा खातीर स्रोत अशे आसात (क्षेत्रफळ हेक्टरांनी) :
+* कालवे: ७
+* बांयो / कूप नलिका: ०
+* तळी: ०
+* ओढे: ०
+* हेर: ५
