--- a/खोतोडें.mw
+++ b/खोतोडें.mw
@@ -82,3 +82,7 @@
 गांवांत पोस्ट आनीक तार ऑफीस उपलब्ध ना.सगळ्यांत लागीं पोस्ट आनीक तार ऑफीस ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 गावाचो पीन कोड ४०३५०६  आसा.
 गांवांत दूरध्वनी उपलब्ध आसा.
+गांवांत सार्वजनीक दूरध्वनी केंद्र उपलब्ध ना.सगळ्यांत लागीं सार्वजनीक दूरध्वनी केंद्र ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत मोबाईल फोन सुवीधा उपलब्ध आसा.
+गांवांत इंटरनेट सुवीधा उपलब्ध ना.सगळ्यांत लागीं इंटरनेट सुवीधा ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत खाजगी कूरियर उपलब्ध ना.सगळ्यांत लागीं खाजगी कूरियर ५ ते १० किलोमिटराच्या अंतराचेर आसा.
