--- a/खोतोडें.mw
+++ b/खोतोडें.mw
@@ -88,7 +88,9 @@
 गांवांत खाजगी कूरियर उपलब्ध ना.सगळ्यांत लागीं खाजगी कूरियर ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 गांवांत शासकीय बस सेवा उपलब्ध आसा.
 गांवांत खाजगी बस सेवा उपलब्ध आसा.
-गांवांत रेल्वे स्थानक उपलब्ध ना.सगळ्यांत लागीं रेल्वे स्थानक १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत रेल्वे स्थागांवांत बैल आनी अन्य जनावरांनी ओढिल्ली गाडी उपलब्ध ना.
+गांवांत समुद्र/नदी बोट सेवा उपलब्ध ना.सगळ्यांत लागीं समुद्र/नदी बोट सेवा १० किलोमिटर परस चड अंतराचेर आसा.
+राष्ट्रीय महामार्ग गांवाक जोडूंक ना.सगळ्यांत लागीं राष्ट्रीय महामार्ग १० किलोमिटर परस चड अंतराचेर आसा.नक उपलब्ध ना.सगळ्यांत लागीं रेल्वे स्थानक १० किलोमिटर परस चड अंतराचेर आसा.
 गांवांत ऑटोरिक्षा व टमटम उपलब्ध ना.सगळ्यांत लागीं ऑटोरिक्षा व टमटम १० किलोमिटर परस चड अंतराचेर आसा.
 गांवांत टॅक्सी उपलब्ध ना.सगळ्यांत लागीं टॅक्सी १० किलोमिटर परस चड अंतराचेर आसा.
 गांवांत व्हॅन उपलब्ध आसा.
