--- a/सोनाळी.mw
+++ b/सोनाळी.mw
@@ -24,3 +24,7 @@
 }}
 
 == सोनाळी  ==
+सोनाळी हे दक्षिण गोवा जिल्ह्यातल्या सांगें तालुक्यातील २५८४ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात १८ कुटुंबाचे व पुराय ६३ लोकसंख्या आसा. हांगा लागीचे शार SANGUEM ३० किलोमीटर अंतरावर आसा. हांगा ३८ दादले आनीक २५ बायला आसा. हांगा अनुसूचित जातीचे लोक ५ आसून अनुसूचित जमातीचे २ लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२६९८९  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
+
+
+== साक्षरताय ==
