--- a/सोनाळी.mw
+++ b/सोनाळी.mw
@@ -31,3 +31,6 @@
 * एकूण साक्षर लोकसंख्या: ४६
 * साक्षर पुरुश लोकसंख्या: २८ (७३.६८%)
 * साक्षर स्त्री लोकसंख्या: १८ (७२.०%)
+== शैक्षणिक सुविधा ==  
+सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (COLEM) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं प्राथमिक शाळा (COLEM) १० किलोमिटर परस चड अंतराचेर आसा.
