--- a/अंबारीं.mw
+++ b/अंबारीं.mw
@@ -24,3 +24,4 @@
 }}
 
 == Ambarim ==
+Ambarim हे उत्तर गोवा जिल्ह्यातल्या तिसवाडी तालुक्यातील १३.८८ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात २७ कुटुंबाचे व पुराय ९३ लोकसंख्या आसा. हांगा लागीचे शार PANAJI १३ किलोमीटर अंतरावर आसा.
