--- a/सोनाळी.mw
+++ b/सोनाळी.mw
@@ -34,3 +34,5 @@
 == शैक्षणिक सुविधा ==  
 सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (COLEM) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं प्राथमिक शाळा (COLEM) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (COLEM) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं माध्यमिक शाळा (COLEM) १० किलोमिटर परस चड अंतराचेर आसा.
