--- a/सोनाळी.mw
+++ b/सोनाळी.mw
@@ -36,3 +36,5 @@
 सगळ्यांत लागीं प्राथमिक शाळा (COLEM) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (COLEM) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं माध्यमिक शाळा (COLEM) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं उच्च माध्यमिक शाळा (CURCHOREM-CACORA) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं पदवी महाविद्यालय (QUEPEM) १० किलोमिटर परस चड अंतराचेर आसा.
