--- a/अंबारीं.mw
+++ b/अंबारीं.mw
@@ -32,3 +32,5 @@ Ambarim हे उत्तर गोवा जिल्ह्यातल्य
 * साक्षर स्त्री लोकसंख्या: ४१ (८३.६७%)
 
 == शैक्षणिक सुविधा ==
+सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (CHORAO) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं प्राथमिक शाळा (CHORAO) ५ किलोमिटरा परस कमी अंतराचेर आसा.
