--- a/अंबारीं.mw
+++ b/अंबारीं.mw
@@ -34,3 +34,5 @@ Ambarim हे उत्तर गोवा जिल्ह्यातल्य
 == शैक्षणिक सुविधा ==
 सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (CHORAO) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं प्राथमिक शाळा (CHORAO) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (CHORAO) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं माध्यमिक शाळा (CHORAO) ५ किलोमिटरा परस कमी अंतराचेर आसा.
