--- a/अंबारीं.mw
+++ b/अंबारीं.mw
@@ -36,3 +36,5 @@ Ambarim हे उत्तर गोवा जिल्ह्यातल्य
 सगळ्यांत लागीं प्राथमिक शाळा (CHORAO) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (CHORAO) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं माध्यमिक शाळा (CHORAO) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं उच्च माध्यमिक शाळा (CHORAO) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं पदवी महाविद्यालय (PANAJI) १० किलोमिटर परस चड अंतराचेर आसा.
