--- a/अंबारीं.mw
+++ b/अंबारीं.mw
@@ -40,3 +40,5 @@ Ambarim हे उत्तर गोवा जिल्ह्यातल्य
 सगळ्यांत लागीं पदवी महाविद्यालय (PANAJI) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (BANDORA C T) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM C T) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वैवस्थापन  संस्था  (PANAJI) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं पॉलिटेक्निक (MAEM) १० किलोमिटर परस चड अंतराचेर आसा.
