--- a/अंबारीं.mw
+++ b/अंबारीं.mw
@@ -44,3 +44,4 @@ Ambarim हे उत्तर गोवा जिल्ह्यातल्य
 सगळ्यांत लागीं पॉलिटेक्निक (MAEM) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (PANAJI) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (PANAJI) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (PENHA-DE-FRANCA C T) १० किलोमिटर परस चड अंतराचेर आसा.
