--- a/खोतोडें.mw
+++ b/खोतोडें.mw
@@ -135,3 +135,6 @@
 २४ वरां वीज पुरवण सगळ्यांखातीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा.
 २४ वरां वीज पुरवण सगळ्यांखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
 == जमिनीचो वापर ==
+खोतोडें ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
+* रान  : ६.१३
+* शेतकामा खातीर ना वापरिल्ली जमीन: १२.४८
