--- a/खोतोडें.mw
+++ b/खोतोडें.mw
@@ -138,3 +138,6 @@
 खोतोडें ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
 * रान  : ६.१३
 * शेतकामा खातीर ना वापरिल्ली जमीन: १२.४८
+* ओसाड आनी लागवड ना केल्ली जमीन: ६०.४५
+* कुरणे आनी अन्य मळ: ०
+* विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: २०.१२
