--- a/खोतोडें.mw
+++ b/खोतोडें.mw
@@ -141,3 +141,6 @@
 * ओसाड आनी लागवड ना केल्ली जमीन: ६०.४५
 * कुरणे आनी अन्य मळ: ०
 * विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: २०.१२
+* लागवडयोग्य पडीक जमीन: १२.८१
+* कायमस्वरूपी पडीक जमीन: ३८.१८
+* सद्यस्थितींत पडीक जमीन: २१
