--- a/खोतोडें.mw
+++ b/खोतोडें.mw
@@ -144,3 +144,6 @@
 * लागवडयोग्य पडीक जमीन: १२.८१
 * कायमस्वरूपी पडीक जमीन: ३८.१८
 * सद्यस्थितींत पडीक जमीन: २१
+* पिकां सकयली जमीन: ३६२.१९
+* एकूण कोरड व्हांवपी जमीन: ३१४.७२
+* एकूण बागायत जमीन: ४७.४७
