--- a/अंबारीं.mw
+++ b/अंबारीं.mw
@@ -55,3 +55,5 @@ Ambarim हे उत्तर गोवा जिल्ह्यातल्य
 सगळ्यांत लागीं अ‍ॅलोपॅथी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा
 सगळ्यांत लागीं पर्यायी वैजकी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं दवाखानो ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं पशुवैजकी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं कुटुंब कल्याणकेंद्र १० किलोमिटर परस चड अंतराचेर आसा.
