--- a/खोतोडें.mw
+++ b/खोतोडें.mw
@@ -148,3 +148,4 @@
 * एकूण कोरड व्हांवपी जमीन: ३१४.७२
 * एकूण बागायत जमीन: ४७.४७
 == शिंपणावळ सुविधा ==
+शिंपणावळ करपा खातीर स्रोत अशे आसात (क्षेत्रफळ हेक्टरांनी) :
