--- a/अंबारीं.mw
+++ b/अंबारीं.mw
@@ -63,3 +63,5 @@ Ambarim हे उत्तर गोवा जिल्ह्यातल्य
 
 
 == पिवपाचे उदक ==
+गांवांत शुद्धीकरण केल्लें नळाचें उदक पुरवण आसा.
+गांवांत शुद्धीकरण करूंक नशिल्लें उदक पुरवण ना.
