--- a/खोतोडें.mw
+++ b/खोतोडें.mw
@@ -154,3 +154,5 @@
 * तळी: ०
 * ओढे: ०
 * हेर: ७.०५
+== उत्पादन ==
+खोतोडें ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): CASHEW NUTS,COUNTRY LIQUOR,BANANA,MANGO PICKLE
