--- a/सोनाळी.mw
+++ b/सोनाळी.mw
@@ -90,3 +90,5 @@
 गावाचो पीन कोड ४०३७०४  आसा.
 गांवांत दूरध्वनी उपलब्ध ना.सगळ्यांत लागीं दूरध्वनी ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 गांवांत सार्वजनीक दूरध्वनी केंद्र उपलब्ध ना.सगळ्यांत लागीं सार्वजनीक दूरध्वनी केंद्र ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत मोबाईल फोन सुवीधा उपलब्ध ना.सगळ्यांत लागीं मोबाईल फोन सुवीधा ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत इंटरनेट सुवीधा उपलब्ध ना.सगळ्यांत लागीं इंटरनेट सुवीधा ५ ते १० किलोमिटराच्या अंतराचेर आसा.
