--- a/अंबारीं.mw
+++ b/अंबारीं.mw
@@ -69,3 +69,5 @@ Ambarim हे उत्तर गोवा जिल्ह्यातल्य
 गांवांत उघड्या बांयचें उदक पुरवण आसा.
 गांवांत हॅन्डपंपचें उदक पुरवण ना.
 गांवांत ट्यूबवेलच्या/बोअरवेलाचो उदक पुरवण आसा.
+गांवांत हॅन्डपंपचें उदक पुरवण ना.
+गांवांत ट्यूबवेलच्या/बोअरवेलाचो उदक पुरवण आसा.
