--- a/सोनाळी.mw
+++ b/सोनाळी.mw
@@ -94,3 +94,5 @@
 गांवांत इंटरनेट सुवीधा उपलब्ध ना.सगळ्यांत लागीं इंटरनेट सुवीधा ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 गांवांत खाजगी कूरियर उपलब्ध ना.सगळ्यांत लागीं खाजगी कूरियर १० किलोमिटर परस चड अंतराचेर आसा.
 गांवांत शासकीय बस सेवा उपलब्ध ना.सगळ्यांत लागीं शासकीय बस सेवा ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत खाजगी बस सेवा उपलब्ध ना.सगळ्यांत लागीं खाजगी बस सेवा ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत रेल्वे स्थानक उपलब्ध आसा.
