--- a/अंबारीं.mw
+++ b/अंबारीं.mw
@@ -71,3 +71,5 @@ Ambarim हे उत्तर गोवा जिल्ह्यातल्य
 गांवांत ट्यूबवेलच्या/बोअरवेलाचो उदक पुरवण आसा.
 गांवांत हॅन्डपंपचें उदक पुरवण ना.
 गांवांत ट्यूबवेलच्या/बोअरवेलाचो उदक पुरवण आसा.
+गांवांत तळी/कोंड उदक पुरवण ना.
+गांवांत अन्य पद्धतीचे उदक पुरवण ना.
