--- a/खोतोडें.mw
+++ b/खोतोडें.mw
@@ -162,3 +162,25 @@
 
 
 == संदर्भ ==
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+[[Category:devanagari]]	
+[[Category:गोंय़]]
+[[Category:उत्तर गोंय]]
+[[Category:गोंयचीं शारां आनी जागे]]
