--- a/अंबारीं.mw
+++ b/अंबारीं.mw
@@ -75,3 +75,5 @@ Ambarim हे उत्तर गोवा जिल्ह्यातल्य
 गांवांत अन्य पद्धतीचे उदक पुरवण ना.
 
 == नितळसाण ==
+गांवांत बंद गटार उपलब्ध आसा.
+गांवांत उघडें गटार उपलब्ध आसा.
