--- a/सोनाळी.mw
+++ b/सोनाळी.mw
@@ -98,3 +98,5 @@
 गांवांत रेल्वे स्थानक उपलब्ध आसा.
 गांवांत ऑटोरिक्षा व टमटम उपलब्ध ना.सगळ्यांत लागीं ऑटोरिक्षा व टमटम ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 गांवांत टॅक्सी उपलब्ध ना.सगळ्यांत लागीं टॅक्सी ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत व्हॅन उपलब्ध ना.सगळ्यांत लागीं व्हॅन ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत ट्रॅक्टर उपलब्ध ना.
