--- a/अंबारीं.mw
+++ b/अंबारीं.mw
@@ -77,3 +77,5 @@ Ambarim हे उत्तर गोवा जिल्ह्यातल्य
 == नितळसाण ==
 गांवांत बंद गटार उपलब्ध आसा.
 गांवांत उघडें गटार उपलब्ध आसा.
+नीट जलस्त्रोतांत सोडिल्ले सांड उदक
+हो क्षेत्र संपूर्ण स्वच्छता अभियानात आसा
