--- a/अंबारीं.mw
+++ b/अंबारीं.mw
@@ -79,3 +79,5 @@ Ambarim हे उत्तर गोवा जिल्ह्यातल्य
 गांवांत उघडें गटार उपलब्ध आसा.
 नीट जलस्त्रोतांत सोडिल्ले सांड उदक
 हो क्षेत्र संपूर्ण स्वच्छता अभियानात आसा
+गांवांत न्हाणीघर आनी सार्वजनिक स्वच्छता घर  उपलब्ध ना.
+गांवांत न्हाणीघर सोडून सार्वजनिक स्वच्छता घर उपलब्ध ना.
