--- a/तांबशें.mw
+++ b/तांबशें.mw
@@ -68,7 +68,7 @@
 सगळ्यांत लागीं पशुवैजकी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा.
 वैजकी सुविधा (अशासकीय)
 गांवांत १ एमबीबीएस पदवीधर वैजकी वेवसायी आसा.
-पिवपाचे उदक
+== पिवपाचे उदक ==
 गांवांत शुद्धीकरण केल्लें नळाचें उदक पुरवण आसा.
 गांवांत शुद्धीकरण करूंक नशिल्लें उदक पुरवण ना.
 गांवांत धापिल्लें बांयचें उदक पुरवण ना.
