--- a/अंबारीं.mw
+++ b/अंबारीं.mw
@@ -88,3 +88,5 @@ Ambarim हे उत्तर गोवा जिल्ह्यातल्य
 == दळणवळण आनीक येरादारी ==
 गांवांत पोस्ट ऑफीस उपलब्ध ना.सगळ्यांत लागीं पोस्ट ऑफीस ५ किलोमिटरा परस कमी अंतराचेर आसा.
 गांवांत उपपोस्ट ऑफीस उपलब्ध ना.सगळ्यांत लागीं उपपोस्ट ऑफीस १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत पोस्ट आनीक तार ऑफीस उपलब्ध ना.सगळ्यांत लागीं पोस्ट आनीक तार ऑफीस ५ किलोमिटरा परस कमी अंतराचेर आसा.
+गावाचो पीन कोड ४०३१०२  आसा.
