--- a/सोनाळी.mw
+++ b/सोनाळी.mw
@@ -114,3 +114,5 @@
 
 
 == बाजार आनी सावकारी पेडी ==
+गांवांत एटीएम उपलब्ध ना.सगळ्यांत लागीं एटीएम १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत वेपाराविशी सावकारी पेडी उपलब्ध ना.सगळ्यांत लागीं वेपाराविशी सावकारी पेडी ५ ते १० किलोमिटराच्या अंतराचेर आसा.
