--- a/अंबारीं.mw
+++ b/अंबारीं.mw
@@ -98,3 +98,5 @@ Ambarim हे उत्तर गोवा जिल्ह्यातल्य
 गांवांत शासकीय बस सेवा उपलब्ध ना.सगळ्यांत लागीं शासकीय बस सेवा ५ किलोमिटरा परस कमी अंतराचेर आसा.
 गांवांत खाजगी बस सेवा उपलब्ध आसा.
 गांवांत रेल्वे स्थानक उपलब्ध ना.सगळ्यांत लागीं रेल्वे स्थानक १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत ऑटोरिक्षा व टमटम उपलब्ध ना.सगळ्यांत लागीं ऑटोरिक्षा व टमटम १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत टॅक्सी उपलब्ध ना.सगळ्यांत लागीं टॅक्सी १० किलोमिटर परस चड अंतराचेर आसा.
