--- a/कुमारखण.mw
+++ b/कुमारखण.mw
@@ -24,3 +24,4 @@
 }}
 
 == कुमारखण (६२६८०८) ==
+कुमारखण हे उत्तर गोवा जिल्ह्यातल्या सत्तरी तालुक्यातील ५५६.७ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात ११४ कुटुंबाचे व पुराय ५२५ लोकसंख्या आसा. हांगा लागीचे शार VALPOI ८ किलोमीटर अंतरावर आसा. हांगा २७८
