--- a/अंबारीं.mw
+++ b/अंबारीं.mw
@@ -102,3 +102,5 @@ Ambarim हे उत्तर गोवा जिल्ह्यातल्य
 गांवांत टॅक्सी उपलब्ध ना.सगळ्यांत लागीं टॅक्सी १० किलोमिटर परस चड अंतराचेर आसा.
 गांवांत व्हॅन उपलब्ध ना.सगळ्यांत लागीं व्हॅन ५ किलोमिटरा परस कमी अंतराचेर आसा.
 गांवांत ट्रॅक्टर उपलब्ध ना.
+गांवांत सायकल रिक्षा (पायचाकी) उपलब्ध ना.
+गांवांत सायकल रिक्षा (यांत्रिक) उपलब्ध ना.
