--- a/तांबशें.mw
+++ b/तांबशें.mw
@@ -80,7 +80,8 @@
 गांवांत न्हय/खाजनाचें उदक पुरवण आसा.
 गांवांत तळी/कोंड उदक पुरवण ना.
 गांवांत अन्य पद्धतीचे उदक पुरवण ना.
-नितळसाण
+
+== नितळसाण ==
 दळणवळण आनीक येरादारी
 गांवांत पोस्ट ऑफीस उपलब्ध ना.सगळ्यांत लागीं पोस्ट ऑफीस १० किलोमिटर परस चड अंतराचेर आसा.
 गांवांत उपपोस्ट ऑफीस उपलब्ध आसा.
