--- a/कुमारखण.mw
+++ b/कुमारखण.mw
@@ -32,3 +32,6 @@
 == शैक्षणिक सुविधा ==
 गांवांत १ शासकीय पूर्व-प्राथमिक शाळा आसा. 
 ﻿गांवांत १ शासकीय प्राथमिक शाळा आसा.
+सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (PISSURLEM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+ सगळ्यांत लागीं माध्यमिक शाळा (PISSURLEM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+ सगळ्यांत लागीं उच्च माध्यमिक शाळा (SANQUELIM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
