--- a/तांबशें.mw
+++ b/तांबशें.mw
@@ -82,7 +82,7 @@
 गांवांत अन्य पद्धतीचे उदक पुरवण ना.
 
 == नितळसाण ==
-दळणवळण आनीक येरादारी
+== दळणवळण आनीक येरादारी ==
 गांवांत पोस्ट ऑफीस उपलब्ध ना.सगळ्यांत लागीं पोस्ट ऑफीस १० किलोमिटर परस चड अंतराचेर आसा.
 गांवांत उपपोस्ट ऑफीस उपलब्ध आसा.
 गांवांत पोस्ट आनीक तार ऑफीस उपलब्ध आसा.
