--- a/अंबारीं.mw
+++ b/अंबारीं.mw
@@ -119,3 +119,6 @@ Ambarim हे उत्तर गोवा जिल्ह्यातल्य
 गांवांत शेतकी कर्ज संस्था उपलब्ध ना.सगळ्यांत लागीं शेतकी कर्ज संस्था १० किलोमिटर परस चड अंतराचेर आसा.
 गांवांत स्वयंसहाय्य गट उपलब्ध ना.सगळ्यांत लागीं स्वयंसहाय्य गट ५ किलोमिटरा परस कमी अंतराचेर आसा.
 गांवांत रेशन मांड उपलब्ध ना.सगळ्यांत लागीं रेशन मांड ५ किलोमिटरा परस कमी अंतराचेर आसा.
+गांवांत मंडी / कायमचे बाजार उपलब्ध ना.सगळ्यांत लागीं मंडी / कायमचे बाजार १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत आठवडयाचो बाजार उपलब्ध ना.सगळ्यांत लागीं आठवडयाचो बाजार १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत कृषी उत्पन्न बाजार समिती उपलब्ध ना.सगळ्यांत लागीं कृषी उत्पन्न बाजार समिती १० किलोमिटर परस चड अंतराचेर आसा.
