--- a/सोनाळी.mw
+++ b/सोनाळी.mw
@@ -154,3 +154,6 @@
 == जमिनीचो वापर ==
 सोनाळी ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
 * रान  : १८८०.७
+* शेतकामा खातीर ना वापरिल्ली जमीन: ९९
+* ओसाड आनी लागवड ना केल्ली जमीन: ०
+* कुरणे आनी अन्य मळ: ०
