--- a/सोनाळी.mw
+++ b/सोनाळी.mw
@@ -159,3 +159,5 @@
 * कुरणे आनी अन्य मळ: ०
 * विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: ०
 * लागवडयोग्य पडीक जमीन: ५७२.८
+* कायमस्वरूपी पडीक जमीन: ०
+* सद्यस्थितींत पडीक जमीन: ०
