--- a/अंबारीं.mw
+++ b/अंबारीं.mw
@@ -134,3 +134,5 @@ Ambarim हे उत्तर गोवा जिल्ह्यातल्य
 गांवांत चित्रपटगृह / व्हिडिओ केंद्र उपलब्ध ना.सगळ्यांत लागीं चित्रपटगृह / व्हिडिओ केंद्र १० किलोमिटर परस चड अंतराचेर आसा.
 गांवांत सार्वजनिक पुस्तकालय उपलब्ध ना.सगळ्यांत लागीं सार्वजनिक पुस्तकालय ५ किलोमिटरा परस कमी अंतराचेर आसा.
 गांवांत सार्वजनिक वाचनालय उपलब्ध ना.सगळ्यांत लागीं सार्वजनिक वाचनालय ५ किलोमिटरा परस कमी अंतराचेर आसा.
+गांवांत सार्वजनिक पुस्तकालय उपलब्ध ना.सगळ्यांत लागीं सार्वजनिक पुस्तकालय ५ किलोमिटरा परस कमी अंतराचेर आसा.
+गांवांत सार्वजनिक वाचनालय उपलब्ध ना.सगळ्यांत लागीं सार्वजनिक वाचनालय ५ किलोमिटरा परस कमी अंतराचेर आसा.
