--- a/सोनाळी.mw
+++ b/सोनाळी.mw
@@ -173,3 +173,14 @@
 * तळी: ०
 * ओढे: ०
 * हेर: १
+
+== उत्पादन ==
+सोनाळी ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): CASHEW NUTS,COUNTRY LIQUOR,PADDY
+
+
+[[वर्ग:[[दक्षिण गोवा]]]]
+[[वर्ग:[[सांगें]]]]
+[[वर्ग:[[दक्षिण गोवा जिल्ल्यांतले गांव]]]]
+
+
+== संदर्भ ==
