--- a/अंबारीं.mw
+++ b/अंबारीं.mw
@@ -138,3 +138,5 @@ Ambarim हे उत्तर गोवा जिल्ह्यातल्य
 गांवांत सार्वजनिक वाचनालय उपलब्ध ना.सगळ्यांत लागीं सार्वजनिक वाचनालय ५ किलोमिटरा परस कमी अंतराचेर आसा.
 
 == वीज ==
+२४ वरां वीज पुरवण घरगुती कामाखा तीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा.
+२४ वरां वीज पुरवण घरगुती कामाखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
