--- a/अंबारीं.mw
+++ b/अंबारीं.mw
@@ -148,3 +148,5 @@ Ambarim हे उत्तर गोवा जिल्ह्यातल्य
 ० वरां वीज पुरवण सगळ्यांखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
 
 == जमिनीचो वापर ==
+Ambarim ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
+* रान  : ०
