--- a/अंबारीं.mw
+++ b/अंबारीं.mw
@@ -150,3 +150,5 @@ Ambarim हे उत्तर गोवा जिल्ह्यातल्य
 == जमिनीचो वापर ==
 Ambarim ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
 * रान  : ०
+* शेतकामा खातीर ना वापरिल्ली जमीन: ३
+* ओसाड आनी लागवड ना केल्ली जमीन: ०
