--- a/साळगांव.mw
+++ b/साळगांव.mw
@@ -1,1 +1,1 @@
-साळगांव हें उत्तर गोवा जिल्ल्यांतल्या बार्देस तालुक्यांतलें ५.८६ चौ. किमी. क्षेत्राचें शार आसून २०११ चे जनगणने प्रमाण ह्या शारांत १५१२ कुटुंबां वा वट्ट ६२८० लोकसंख्या आसा. जिल्लो मुख्यालय, PANAJI हांगां १० किलोमीटर अंतराचेर आसा. राज्याची राजधानी PANAJI हांगां १० किलोमीटर अंतराचेर आसा. हातूंत ३१७५ दादले आनी ३१०५ बांयलां आसात. हातूंत अनुसुचीत जातीचे लोक ४९ आसून अनुसुचीत जमातीचे ८० लोक आसात. ह्या गांवचो जनगणनेतचो स्थळ निर्देशांक ६२६६९६ आसात।
+साळगांव हें उत्तर गोवा जिल्ल्यांतल्या बार्देस तालुक्यांतलें ५.८६ चौ. किमी. क्षेत्राचें शार आसून २०११ चे जनगणने प्रमाण ह्या शारांत १५१२ कुटुंबां वा वट्ट ६२८० लोकसंख्या आसा. जिल्लो मुख्यालय, PANAJI हांगां १० किलोमीटर अंतराचेर आसा. राज्याची राजधानी PANAJI हांगां १० किलोमीटर अंतराचेर आसा. हातूंत ३१७५ दादले आनी ३१०५ बांयलां आसात. हातूंत अनुसुचीत जातीचे लोक ४९ आसून अनुसुचीत जमातीचे ८० लोक आसात. ह्या गांवचो जनगणनेतचो स्थळ निर्देशांक ६२६६९६ आसात.
