--- a/कुमारखण.mw
+++ b/कुमारखण.mw
@@ -103,3 +103,7 @@
 जिल्ल्यातलो अन्य रस्तो गांवाक जोडूंक ना.सगळ्यांत लागीं जिल्ल्यातलो अन्य रस्तो ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं वाहतुकी करपासारखो जलमार्ग १० किलोमिटर परस चड अंतराचेर आसा.
 == बाजार आनी सावकारी पेडी ==
+गांवांत एटीएम उपलब्ध ना.सगळ्यांत लागीं एटीएम ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत वेपाराविशी सावकारी पेडी उपलब्ध ना.सगळ्यांत लागीं वेपाराविशी सावकारी पेडी ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत सहकारी सावकारी पेडी उपलब्ध ना.सगळ्यांत लागीं सहकारी सावकारी पेडी ५ किलोमिटरा परस कमी अंतराचेर आसा.
+गांवांत शेतकी कर्ज संस्था उपलब्ध ना.सगळ्यांत लागीं शेतकी कर्ज संस्था १० किलोमिटर परस चड अंतराचेर आसा.
