*Empty MediaWiki Message*

--- a/अंदमान_आनी_निकोबार.mw
+++ b/अंदमान_आनी_निकोबार.mw
@@ -1,5 +1,5 @@
 [[File:Andaman and Nicobar islands.jpg|thumb|अंदमान आनी निकोबार]]
-'''अंदमान आनी निकोबार''' बंगालाच्या उपसागरांत आशिल्लो भारताचो केंद्रशासीत प्रदेश. विस्तारः उत्तर अक्षींश 6 45’ ते 13 45’ उदेंत रेखांश 92 15ट ते 94 13ट . ह्या प्रदेशांतल्या अंदमान जुंव्याचें क्षेत्रफळ 6,340 चौ.किमी. आनी निकोबार जुंव्याचें क्षेत्रफळ 1,953 चौ.किमी. आसा. ह्या प्रदेशाची एकूण लोकसंख्यास 1,88,254(1981). हाच्या उदेंते कडल्या दर्याक अंदमान दर्या म्हणटात. उत्तर, मध्य आनी दक्षिण अंदमान; बाराटांगा आनी रटलंड हे पांच जुंवे मेळून एक अंदमान जाला. हाचे दक्षिणेक धाकटें अंदमान आसा. ते भायर उदेंते कडलो रिची जुंव्याचो चोमो अशें ल्हान व्हड जुंवें एकठांय करून 257 जुंव्यांचें एक अंदमान जुंवो तयार जाता. 10 30’ अक्षवृत्ताचे दक्षिणेक धाकट्या अंदमान जुंव्या सावन 96 किमी. अंतराचेर कारनिकोबार, तेरेसा, कामोर्ता, त्रिकंत, नानकवरी, काचाल, धाकलें निकोबार आनी व्हडलें निकोबार अशे 62 जुंवें मेळून निकोबार जुंवो तयार जाला. हे जुंवे ब्रह्मप्रदेशांतल्या नेग्राईश भुशिराचेदक्षिणेक 193 किमी. अंतराचेर आनी सुमात्रा जुंव्याच्या औचिनहेड तोंकाचे अस्तंतेक 146 किमी. अंतराचेर आसात. भारताचे राखणेचे नदरेन हीं थळां उपेगी आसात.<ref>http://en.wikipedia.org/wiki/Andaman_and_Nicobar_Islands</ref>
+'''अंदमान आनी निकोबार''' बंगालाच्या उपसागरांत आशिल्लो भारताचो केंद्रशासीत प्रदेश. विस्तारः उत्तर अक्षींश 6 45’ ते 13 45’ उदेंत रेखांश 92 15ट ते 94 13ट . ह्या प्रदेशांतल्या अंदमान जुंव्याचें क्षेत्रफळ 6,340 चौ.किमी. आनी निकोबार जुंव्याचें क्षेत्रफळ 1,953 चौ.किमी. आसा. ह्या प्रदेशाची एकूण लोकसंख्या 1,88,254(1981). हाच्या उदेंते कडल्या दर्याक अंदमान दर्या म्हणटात. उत्तर, मध्य आनी दक्षिण अंदमान; बाराटांगा आनी रटलंड हे पांच जुंवे मेळून एक अंदमान जाला. हाचे दक्षिणेक धाकटें अंदमान आसा. ते भायर उदेंते कडलो रिची जुंव्याचो चोमो अशें ल्हान व्हड जुंवें एकठांय करून 257 जुंव्यांचें एक अंदमान जुंवो तयार जाता. 10 30’ अक्षवृत्ताचे दक्षिणेक धाकट्या अंदमान जुंव्या सावन 96 किमी. अंतराचेर कारनिकोबार, तेरेसा, कामोर्ता, त्रिकंत, नानकवरी, काचाल, धाकलें निकोबार आनी व्हडलें निकोबार अशे 62 जुंवें मेळून निकोबार जुंवो तयार जाला. हे जुंवे ब्रह्मप्रदेशांतल्या नेग्राईश भुशिराचेदक्षिणेक 193 किमी. अंतराचेर आनी सुमात्रा जुंव्याच्या औचिनहेड तोंकाचे अस्तंतेक 146 किमी. अंतराचेर आसात. भारताचे राखणेचे नदरेन हीं थळां उपेगी आसात.<ref>http://en.wikipedia.org/wiki/Andaman_and_Nicobar_Islands</ref>
 
 == '''भूंयवर्णन''' ==
 निकोबार आनी धाकलें अंदमान सोडल्यार हेर सगळो वाठार दोंगरी आसा. ह्या प्रदेशांत कांय कडेन इओसीन काळांतले वालुकाश्म, ज्वालामुखी वरवीं आयिल्ले डाइक, झिजून धार आयिल्ले चुन्याचे फातर, सर्पटाइन फातर, निळसर धांक मारिल्ले पंकाश्म, पिंडाश्म, प्रवाळी फातरप अशी हांगाची रचणूक आसा.<ref>http://www.and.nic.in/</ref>
