*Empty MediaWiki Message*

--- a/माधवी_सरदेसाय.mw
+++ b/माधवी_सरदेसाय.mw
@@ -1,4 +1,4 @@
-'''डॉ माधवी सरदेसाय''' ही एक भारतीय शिक्षणीक तज्ञ आशिल्ली. ती जाग म्हयनाळ्याची संपादक आनी प्रकाशक आशिल्ली. तशेंच ती एक विद्वान, प्रकाशक आनी बरोवपी जाणी [[गोंय|गोंयांत]] कोंकणी भाशेखातीर काम केलां. तिचो जल्म '''७ जुलय १९६२''' वर्सा जाल्लो. ती '''२२ डिसेंबर २०१४''' वर्सा संवसाराक अंतरली.<ref> http://www.publishingnext.in/madhavi-sardesai/</ref>
+'डॉ माधवी सरदेसाय' ही एक भारतीय शिक्षणीक तज्ञ आशिल्ली. ती जाग म्हयनाळ्याची संपादक आनी प्रकाशक आशिल्ली. तशेंच ती एक विद्वान, प्रकाशक आनी बरोवपी जाणी गोंय गोंयांत कोंकणी भाशेखातीर काम केलां. तिचो जल्म '७ जुलय १९६२' वर्सा जाल्लो. ती '२२ डिसेंबर २०१४' वर्सा संवसाराक अंतरली.<ref> http://www.publishingnext.in/madhavi-sardesai/</ref>
 [[File:Dr Madhavi Sardesai, Goa University..JPG|thumbnail|right|माधवी सरदेसाय]]
 
 == '''जीण आनी शिक्षण''' ==
