--- a/आंबेडें.mw
+++ b/आंबेडें.mw
@@ -24,3 +24,4 @@
 }}
 
 == आंबेडें ==
+आंबेडें हे उत्तर गोवा जिल्ह्यातल्या सत्तरी तालुक्यातील १२५.२७ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात ५५ कुटुंबाचे व पुराय २७२ लोकसंख्या आसा.
