--- a/आंबेडें.mw
+++ b/आंबेडें.mw
@@ -38,3 +38,5 @@
 ﻿गांवांत १ शासकीय प्राथमिक शाळा आसा.
 गांवांत १ शासकीय कनिष्ठ माध्यमिक शाळा  आसा. 
 ﻿गांवांत १ शासकीय माध्यमिक शाळा आसा.
+सगळ्यांत लागीं उच्च माध्यमिक शाळा (VALPOI) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं पदवी महाविद्यालय (SANQUELIM) १० किलोमिटर परस चड अंतराचेर आसा.
