--- a/आंबेडें.mw
+++ b/आंबेडें.mw
@@ -40,3 +40,5 @@
 ﻿गांवांत १ शासकीय माध्यमिक शाळा आसा.
 सगळ्यांत लागीं उच्च माध्यमिक शाळा (VALPOI) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं पदवी महाविद्यालय (SANQUELIM) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (BANDORA C T) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM C T) १० किलोमिटर परस चड अंतराचेर आसा.
