--- a/आंबेडें.mw
+++ b/आंबेडें.mw
@@ -42,3 +42,5 @@
 सगळ्यांत लागीं पदवी महाविद्यालय (SANQUELIM) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (BANDORA C T) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM C T) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वैवस्थापन  संस्था  (SANQUELIM) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं पॉलिटेक्निक (MAEM) १० किलोमिटर परस चड अंतराचेर आसा.
