--- a/कुमारखण.mw
+++ b/कुमारखण.mw
@@ -137,3 +137,6 @@
 २४ वरां वीज पुरवण सगळ्यांखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
 == जमिनीचो वापर ==
 कुमारखण ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
+* रान  : २३४.१४
+* शेतकामा खातीर ना वापरिल्ली जमीन: १५.५८
+* ओसाड आनी लागवड ना केल्ली जमीन: ०
