--- a/कुमारखण.mw
+++ b/कुमारखण.mw
@@ -149,3 +149,9 @@
 * एकूण कोरड व्हांवपी जमीन: २६६.५५
 * एकूण बागायत जमीन: १३.१२
 == शिंपणावळ सुविधा ==
+शिंपणावळ करपा खातीर स्रोत अशे आसात (क्षेत्रफळ हेक्टरांनी) :
+* कालवे: १.२
+* बांयो / कूप नलिका: ८.०८
+* तळी: ०
+* ओढे: ०
+* हेर: ३.८४
