--- a/आंगोद.mw
+++ b/आंगोद.mw
@@ -6,3 +6,177 @@
 * एकूण साक्षर लोकसंख्या: २९३२
 * साक्षर पुरुश लोकसंख्या: १४७९ (८२.१२%)
 * साक्षर स्त्री लोकसंख्या: १४५३ (७२.६५%)
+
+== शैक्षणिक सुविधा ==  
+गांवांत ५ शासकीय पूर्व-प्राथमिक शाळा आसा. ﻿गांवांत १ खाजगी पूर्व-प्राथमिक शाळा आसा.
+गांवांत ४ शासकीय प्राथमिक शाळा आसा. ﻿गांवांत १ खाजगी प्राथमिक शाळा आसा.
+﻿गांवांत १ शासकीय कनिष्ठ माध्यमिक शाळा  आसा. ﻿गांवांत १ खाजगी कनिष्ठ माध्यमिक शाळा  आसा.
+﻿गांवांत १ शासकीय माध्यमिक शाळा आसा. ﻿गांवांत १ खाजगी माध्यमिक शाळा आसा.
+ सगळ्यांत लागीं उच्च माध्यमिक शाळा (CANACONA) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+ सगळ्यांत लागीं पदवी महाविद्यालय (CANACONA) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+ सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (VERNA CT) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM CT) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं वैवस्थापन  संस्था  (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं पॉलिटेक्निक (VERNA CT) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (CANACONA) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+ सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (CANACONA) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+ सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (CANACONA) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+ 
+
+
+== वैजकी सुविधा (शासकीय) ==
+सगळ्यांत लागीं समाजिक आरोग्य केंद्र ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं प्राथमिक आरोग्य केंद्र ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+﻿गांवांत १ प्राथमिक आरोग्य उपकेंद्र  आसा.
+सगळ्यांत लागीं प्रसूति आनी बालकल्याण केंद्र ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं क्षयरोग उपचार केंद्र  १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं अ‍ॅलोपॅथी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं पर्यायी वैजकी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा.
+﻿गांवांत १ दवाखानो आसा.
+सगळ्यांत लागीं पशुवैजकी रुग्णालय ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+
+﻿गांवांत १ कुटुंब कल्याणकेंद्र आसा.
+
+
+== वैजकी सुविधा (अशासकीय) ==
+
+
+
+गांवांत २ एमबीबीएस पदवीधर वैजकी वेवसायी आसा.
+﻿गांवांत १  अन्य पदवीधर वैजक वेवसायी आसा.
+गांवांत २ पदवी नाशिल्ले वैजक वेवसायी आसा.
+﻿गांवांत १ पिढीजात वैद्य आसा.
+﻿गांवांत १ वखदालय आसा.
+
+
+
+== पिवपाचे उदक ==
+गांवांत शुद्धीकरण केल्लें नळाचें उदक पुरवण आसा.
+गांवांत शुद्धीकरण करूंक नशिल्लें उदक पुरवण ना.
+गांवांत धापिल्लें बांयचें उदक पुरवण आसा.
+गांवांत उघड्या बांयचें उदक पुरवण आसा.
+गांवांत हॅन्डपंपचें उदक पुरवण ना.
+गांवांत ट्यूबवेलच्या/बोअरवेलाचो उदक पुरवण आसा.
+गांवांत झरीचें उदक पुरवण आसा.
+गांवांत न्हय/खाजनाचें उदक पुरवण आसा.
+गांवांत तळी/कोंड उदक पुरवण आसा.
+गांवांत अन्य पद्धतीचे उदक पुरवण ना.
+
+
+== नितळसाण ==
+गांवांत बंद गटार उपलब्ध आसा.
+गांवांत उघडें गटार उपलब्ध आसा.
+नीट जलस्त्रोतांत सोडिल्ले सांड उदक
+हें क्षेत्र पुराय तरेन स्वच्छता अभियानांत ना
+गांवांत न्हाणीघर आनी सार्वजनिक स्वच्छता घर  उपलब्ध ना.
+गांवांत न्हाणीघर सोडून सार्वजनिक स्वच्छता घर उपलब्ध ना.
+गांवांत ग्रामीण उत्पादक केंद्रे ना जाल्यार सॅनिटरी हार्डवेअर मांड उपलब्ध ना.
+गांवांत ग्रामीण सॅनिटरी हार्डवेअर मांड उपलब्ध ना.
+गांवांत सामूहिक बायोगॅस ना जाल्यार उत्पादक पुनर्वापराची वेवस्था उपलब्ध ना.
+
+
+== दळणवळण आनीक येरादारी ==
+गांवांत पोस्ट ऑफीस उपलब्ध ना.सगळ्यांत लागीं पोस्ट ऑफीस ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत उपपोस्ट ऑफीस उपलब्ध आसा.
+गांवांत पोस्ट आनीक तार ऑफीस उपलब्ध ना.सगळ्यांत लागीं पोस्ट आनीक तार ऑफीस ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गावाचो पीन कोड ४०३७०२  आसा.
+गांवांत दूरध्वनी उपलब्ध आसा.
+गांवांत सार्वजनीक दूरध्वनी केंद्र उपलब्ध आसा.
+गांवांत मोबाईल फोन सुवीधा उपलब्ध आसा.
+गांवांत इंटरनेट सुवीधा उपलब्ध आसा.
+गांवांत खाजगी कूरियर उपलब्ध ना.सगळ्यांत लागीं खाजगी कूरियर ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत शासकीय बस सेवा उपलब्ध आसा.
+गांवांत खाजगी बस सेवा उपलब्ध आसा.
+गांवांत रेल्वे स्थानक उपलब्ध ना.सगळ्यांत लागीं रेल्वे स्थानक ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत ऑटोरिक्षा व टमटम उपलब्ध आसा.
+गांवांत टॅक्सी उपलब्ध आसा.
+गांवांत व्हॅन उपलब्ध आसा.
+गांवांत ट्रॅक्टर उपलब्ध ना.
+गांवांत सायकल रिक्षा (पायचाकी) उपलब्ध ना.
+गांवांत सायकल रिक्षा (यांत्रिक) उपलब्ध ना.
+गांवांत बैल आनी अन्य जनावरांनी ओढिल्ली गाडी उपलब्ध ना.
+गांवांत समुद्र/नदी बोट सेवा उपलब्ध ना.सगळ्यांत लागीं समुद्र/नदी बोट सेवा १० किलोमिटर परस चड अंतराचेर आसा.
+राष्ट्रीय महामार्ग गांवाक जोडूंक ना.सगळ्यांत लागीं राष्ट्रीय महामार्ग ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+राज्य महामार्ग गांवाक जोडूंक ना.सगळ्यांत लागीं राज्य महामार्ग १० किलोमिटर परस चड अंतराचेर आसा.
+जिल्ल्यातलो मुखेल रस्तो गांवाक जोडला.
+जिल्ल्यातलो अन्य रस्तो गांवाक जोडला.
+
+
+
+सगळ्यांत लागीं वाहतुकी करपासारखो जलमार्ग १० किलोमिटर परस चड अंतराचेर आसा.
+
+
+
+== बाजार आनी सावकारी पेडी ==
+गांवांत एटीएम उपलब्ध ना.सगळ्यांत लागीं एटीएम ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत वेपाराविशी सावकारी पेडी उपलब्ध आसा.
+गांवांत सहकारी सावकारी पेडी उपलब्ध ना.सगळ्यांत लागीं सहकारी सावकारी पेडी ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत शेतकी कर्ज संस्था उपलब्ध ना.सगळ्यांत लागीं शेतकी कर्ज संस्था ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत स्वयंसहाय्य गट उपलब्ध आसा.
+गांवांत रेशन मांड उपलब्ध आसा.
+गांवांत मंडी / कायमचे बाजार उपलब्ध ना.सगळ्यांत लागीं मंडी / कायमचे बाजार ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत आठवडयाचो बाजार उपलब्ध ना.सगळ्यांत लागीं आठवडयाचो बाजार ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत कृषी उत्पन्न बाजार समिती उपलब्ध ना.सगळ्यांत लागीं कृषी उत्पन्न बाजार समिती ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+
+
+== आरोग्य आरोग्य, पोषण आहार आनी मनोरंजन सुविधा ==
+गांवांत एकात्मिक बाल विकास योजना (पोषण आहार केंद्र) उपलब्ध ना.सगळ्यांत लागीं एकात्मिक बाल विकास योजना (पोषण आहार केंद्र) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत बालवाडी (पोषण आहार केंद्र) उपलब्ध आसा.
+गांवांत इतर पोषण आहार केंद्र उपलब्ध आसा.
+गांवांत 'आशा' कर्मचारी उपलब्ध आसा.
+गांवांत समाज भवन (टीव्ही वेवस्था आशिल्ली/नाशिल्ली) उपलब्ध ना.सगळ्यांत लागीं समाज भवन (टीव्ही वेवस्था आशिल्ली/नाशिल्ली) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत खेळांमळ उपलब्ध आसा.
+गांवांत खेळ / मनोरंजन केंद्र उपलब्ध आसा.
+गांवांत चित्रपटगृह / व्हिडिओ केंद्र उपलब्ध ना.सगळ्यांत लागीं चित्रपटगृह / व्हिडिओ केंद्र १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत सार्वजनिक पुस्तकालय उपलब्ध आसा.
+गांवांत सार्वजनिक वाचनालय उपलब्ध आसा.
+गांवांत खबरेपत्र पुरवण उपलब्ध ना.सगळ्यांत लागीं खबरेपत्र पुरवण ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत विधानसभा मतदान केंद्र उपलब्ध आसा.
+गांवांत जन्म मृत्यु नोंदणी केंद्र उपलब्ध आसा.
+
+
+== वीज ==
+२४ वरां वीज पुरवण घरगुती कामाखा तीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा.
+२४ वरां वीज पुरवण घरगुती कामाखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
+२४ वरां वीज पुरवण शेतकामाखातीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा.
+२४ वरां वीज पुरवण शेतकामाखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
+२४ वरां वीज पुरवण वेपाराविशी कामाखातीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा.
+२४ वरां वीज पुरवण वेपाराविशी कामाखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
+२४ वरां वीज पुरवण सगळ्यांखातीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा.
+२४ वरां वीज पुरवण सगळ्यांखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
+
+
+== जमिनीचो वापर ==
+आंगोद ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
+* रान  : २६६
+* शेतकामा खातीर ना वापरिल्ली जमीन: ४१०
+* ओसाड आनी लागवड ना केल्ली जमीन: २०
+* कुरणे आनी अन्य मळ: ०
+* विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: ०
+* लागवडयोग्य पडीक जमीन: ४४८
+* कायमस्वरूपी पडीक जमीन: १६
+* सद्यस्थितींत पडीक जमीन: १०
+* पिकां सकयली जमीन: ३१०
+* एकूण कोरड व्हांवपी जमीन: ३०२
+* एकूण बागायत जमीन: ८
+
+
+== शिंपणावळ सुविधा ==
+शिंपणावळ करपा खातीर स्रोत अशे आसात (क्षेत्रफळ हेक्टरांनी) :
+* कालवे: ०
+* बांयो / कूप नलिका: ०
+* तळी: ३
+* ओढे: ०
+* हेर: ५
+
+
+== उत्पादन ==
+आंगोद ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): PADDY,BROOMS,CASHEW NUTS,COUNTRY LIQUOR,POTTERY,COCONUTS,COCONUT OIL,CARPENTRY
+
+
+[[वर्ग:[[दक्षिण गोवा]]]]
+[[वर्ग:[[काणकोण]]]]
+[[वर्ग:[[दक्षिण गोवा जिल्ल्यांतले गांव]]]]
+
+
+== संदर्भ ==
