--- a/अंदमान_आनी_निकोबार.mw
+++ b/अंदमान_आनी_निकोबार.mw
@@ -7,7 +7,7 @@
 निकोबार, बॅरन आनी नारकोंडम आदी जुंव्यांक जोडपी वळींचेर भुंयेचो वाठार मात्सो अर्दकुटो आसा. देखूनच निकोबार जुंव्याचेर परतून परतून भुंयकाप जातात. ह्या प्रदेशाक लाबिल्ली दर्यादेग दंतूर आसा, आनी ताचेर कितल्योश्योच खाडयो आनी सोबीत बंदरां आसात. प्रदेशाच्या अस्तंतेक 50 किमी. अंतराचेर बंगालचो उपसागर आनी उदेंतेक सुमार 150 किमी. अंतराचेर अंदमान दर्या आसा.मुखेल जुंव्या सावन 100-125 किमी. अंतराचेर अस्तंतेक सेंटिनल, उदेंतेक बॅरन आनी नारकोंडम असें जुंवे आसात. बॅरन जुंवो हो 153 मी. उंचायेचो एक ज्वालामुखी आसा, जाचो 19 व्या शेंकड्याच्या सुर्वेक स्फोट जाल्लो. ह्या प्रदेशांतल्या अंदमान वाठारांत उदकाचे व्हाळ ल्हान आनी गिमांत आटपी आसले तरी ताका वेग मात भरपूर आसता. दक्षिण अंदमानांत बाराय म्हयने उदक आसता. ग्रेट निकोबारांत कांय न्हंयो आसात.
 
 == '''हवामान''' ==
-ह्या प्रदेशाचे हवामान चडशें दमट आनी उश्ण आसता. हांगांचे तापमान चडांतचड 20 ते 30 से. आनी उण्यांत उणें 24 ते 25 से. आसता. नैऋत्य आनी ईशान्य मौसमी वाऱ्या खातीर ह्या जुंव्याचेर वर्सूय भर पावस आसता. हांगा पावसाचें प्रमाण 312 सेंमी. आसा आनी दक्षिणे कडल्यान उत्तरेकडेन हें प्रमाम उणें जायत वता. वर्सूय भर ङांगा भरपूर वारें आसून कांय दीस वादळी वारेंय व्हांवता.
+ह्या प्रदेशाचें हवामान चडशें दमट आनी उश्ण आसता. हांगांचे तापमान चडांतचड 20 ते 30 से. आनी उण्यांत उणें 24 ते 25 से. आसता. नैऋत्य आनी ईशान्य मौसमी वाऱ्या खातीर ह्या जुंव्याचेर वर्सूय भर पावस आसता. हांगा पावसाचें प्रमाण 312 सेंमी. आसा आनी दक्षिणे कडल्यान उत्तरेकडेन हें प्रमाम उणें जायत वता. वर्सूय भर हांगा भरपूर वारें आसून कांय दीस वादळी वारेंय व्हांवता.
 
 == '''वनस्पत आनी मोनजात''' ==
 अंदमान आनी निकोबार प्रदेशाच्या जमनीचो 77% वाठार रानान भरिल्लो आसा. अंदमानांतल्या वनस्पतींचे तीन भाग करूं येतात. सदां पाचवीचार झाडां, पानझडी आनी दर्यादेगेवयली वनस्पत. ह्या वाठारांत पणस, नाल्ल, सुपारी, सागाच्यो तरेकवार जाती, शिशें सॅटीनवूड, कोको आनी जायते तरेची झाडां आसात. हांगांची रानांतली संपत्ती भारतीय अर्थकारणाच्या परकीय चलन मेळोवपाचे नदरेन खूब म्हत्वाची आसा. हांगां खूब कडेन एकेच तरेची झाडां मेळिल्ल्यान वेपारी नदरेन उपाट फायदो जाता. प्लायवूड आनी फस्कां तयार करपाच्या लांकडांचीं झाडां हांगाच्या रानांनी भरपूर मेळटात. निकोबारांत नाल्ल, सुपारी, ताडरूख आनी मदेराक उपेगी पडपी लाकूड मेळटा.
