*Empty MediaWiki Message*

--- a/आंगोद.mw
+++ b/आंगोद.mw
@@ -1,3 +1,54 @@
+{{Infobox settlement
+| name                   = आंगोद
+| native_name            = 
+| native_name_lang       = 
+| other_name             = 
+| nickname               = 
+| settlement_type        = गांव
+| image_skyline          = 
+| image_alt              = 
+| image_caption          = 
+| pushpin_map            = India Goa 
+| pushpin_label_position = 
+| pushpin_map_alt        = 
+| pushpin_map_caption    = आंगोद गोंयातलो
+| latd                   =15.04
+| latm                   =
+| lats                   = 
+| latNS                  = N
+| longd                  =73.99 
+| longm                  = 
+| longs                  = 
+| longEW                 = E
+| coordinates_display    = 
+| subdivision_type       = देश
+| subdivision_name       = भारत
+| subdivision_type1      = राज्य
+| subdivision_name1      = गोंय
+| subdivision_type2      = जिल्लो
+| subdivision_name2      = दक्षिण गोंय
+| subdivision_type3      = तालुका
+| subdivision_name3      = काणकोण
+| unit_pref              = Metric
+| area_footnotes         = 
+| area_rank              = 
+| area_total_km2         =
+| population_total       = 2986
+| population_as_of       = 2011
+| population_rank        = 
+| population_density_km2 = auto
+| population_demonym     = 
+| population_footnotes   = 
+| timezone1              = इंडियन स्टांडर्ड टाइम
+| utc_offset1            = +5:30
+| postal_code_type       = 
+| postal_code            = 40370२
+| area_code              = 91 0832
+| website                = 
+| footnotes              = 
+}}
+
+
 == आंगोद ==
 आंगोद हे दक्षिण गोवा जिल्ह्यातल्या काणकोण तालुक्यातील १४८० हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात ९२४ कुटुंबाचे व पुराय ३८०१ लोकसंख्या आसा.
 हांगा लागीचे शार CANACONA ८ किलोमीटर अंतरावर आसा.हांगा १८०१ दादले आनीक २००० बायला आसा. हांगा अनुसूचित जातीचे लोक ९ आसून अनुसूचित जमातीचे ३७१ लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२७०२३  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
