*Empty MediaWiki Message*

--- a/भुंयपाल.mw
+++ b/भुंयपाल.mw
@@ -1,6 +1,6 @@
 '''भुंयपाल
 '''
-भुंयपाल हें उत्तर गोंय जिल्ह्यातल्या सत्तरी तालुक्यात ४११.६ हेक्टर क्षेत्राचो गांव आसून २०११ च्या जनगणनेनुसार ह्या गांवांत ३०३ कुंटुंबात पुराय १४०३ लोकसंख्या आसा. हांगा लागीचे शार VALPOI ८ किलोमीटर अंतराचेर आसा. हांगा ७२२ दादले आनीक ६८१ बायलां आसा. हांगा अनुसूचीत जातीचे लोक १३ आसून अनुसूचीत जमातीचे २५ लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२६८०७  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
+भुंयपाल हें उत्तर गोंय जिल्ह्यातल्या सत्तरी तालुक्यात ४११.६ हेक्टर क्षेत्राचो गांव आसून २०११ च्या जनगणनेनुसार ह्या गांवांत ३०३ कुंटुंबात पुराय १४०३ लोकसंख्या आसा. हांगा लागीचे शार VALPOI ८ किलोमीटर अंतराचेर आसा. हांगा ७२२ दादले आनीक ६८१ बायलां आसा. हांगा अनुसूचीत जातीचे लोक १३ आसून अनुसूचीत जमातीचे २५ लोक आसात. ह्या गांवाचो जनगणनेतलो स्थल निर्देशांक ६२६८०७  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
 
 साक्षरताय ==  
 * एकूण साक्षर लोकसंख्या: १००९
