*Empty MediaWiki Message*

--- a/साळगांव.mw
+++ b/साळगांव.mw
@@ -21,3 +21,4 @@
 शैक्षणिक सुविधा
 शारांत १ शासकीय प्राथमिक शाळा आसा. शारांत २ खाजगी प्राथमिक शाळा आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (फक्त वाणिज्य) MAPUSA (७ किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी शास्त्र) PANAJI (१२ किमी) हांगां आसा.
