--- a/कडवळ.mw
+++ b/कडवळ.mw
@@ -30,3 +30,9 @@
 * साक्षर पुरुश लोकसंख्या: १ (३३.३३%)
 * साक्षर स्त्री लोकसंख्या: १ (५०.०%)
 == शैक्षणिक सुविधा ==
+सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (DAVEM) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं प्राथमिक शाळा (CARANZOL) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+ सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (SANVORDEM) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं माध्यमिक शाळा (SANVORDEM) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं उच्च माध्यमिक शाळा (VALPOI) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं पदवी महाविद्यालय (SANQUELIM) १० किलोमिटर परस चड अंतराचेर आसा.
