--- a/आंबेडें.mw
+++ b/आंबेडें.mw
@@ -150,3 +150,5 @@
 २४ वरां वीज पुरवण सगळ्यांखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
 
 == जमिनीचो वापर ==
+आंबेडें ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
+* रान  : ०
