--- a/आंबेडें.mw
+++ b/आंबेडें.mw
@@ -158,3 +158,5 @@
 * विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: १.१
 * लागवडयोग्य पडीक जमीन: १.७५
 * कायमस्वरूपी पडीक जमीन: ४.८८
+* सद्यस्थितींत पडीक जमीन: ५.८८
+* पिकां सकयली जमीन: १०९.५२
