*Empty MediaWiki Message*

--- a/साळगांव.mw
+++ b/साळगांव.mw
@@ -2,23 +2,23 @@
 
 लोकसंख्योप्रमाणे शाराचो दर्जो V (लोकसंख्या_एकूण ५,००० to ९,९९९). शाराची नागरी स्थीती आसा. 'सर्वेक्षण शार'. १ लाखा परस चड लोकसंख्या आशिल्लें सगळ्यांत लागींचें BELGAUM हें शार १७६ किमी अंतराचेर आसा. ५ लाखां परस चड लोकसंख्या आशिल्लें. सगळ्यांत लागींचें PUNE हें शार ४७१ किमी अंतराचेर आसा. रेल्व स्टेशन ११ किमी अंतराचेर TIVIM हांगां आसा.
 
-हवामान
+== '''हवामान''' ==
 पावस (मिमी.): ३०९६.९७ 
 कमाल तापमान (सेल्सिअस): ३१.५३
 किमान तापमान (सेल्सिअस): २३.५१
 
-साक्षरता
+== '''साक्षरता''' ==
 एकूण साक्षर लोकसंख्या: ५२६०
 साक्षर पुरुश लोकसंख्या: २७३७ (८६.२%)
 साक्षर स्त्री लोकसंख्या: २५२३ (८१.२६%)
 
-नितळसाण आनी पिवपाचें उदक
+== '''नितळसाण आनी पिवपाचें उदक''' ==
 शारांत उकती आनी बंद गटारवेवस्था आसा. ल्हान धरणांतल्यान उदकापुरवण जाता. शाराक शुध्दीकरण केल्ल्या नळाच्या उदकाची पुरवण जाता.उदका पुरवणेची तांक 5000 किलो लिटर आसा.सगळ्यांत लागीं आग पालोवपाची सुविधा MAPUSA(५ किमी)हांगां आसा.
 
-वैजकी सुविधा (शासकीय)
+== '''वैजकी सुविधा (शासकीय)''' ==
 सगळ्यांत लागीं अ‍ॅलोपॅथी रुग्णालय ७ किमी हांगां आसा. सगळ्यांत लागीं पर्यायी वैजकी रुग्णालय ४० किमी हांगां आसा. ﻿शारांत १ दवाखानो आसा.शारांत १ कुटूंब कल्याण केंद्र आसा. ﻿शारांत १ प्रसूती आनी बालकल्याण केंद्र आसा. सगळ्यांत लागीं प्रसूती केंद्र ७ किमी हांगां आसा. सगळ्यांत लागीं क्षयरोग उपचार केंद्र १२ किमी हांगां आसा. सगळ्यांत लागीं रुग्णालय ० किमी हांगां आसा. सगळ्यांत लागीं पशुवैजकी रुग्णालय ८ किमी हांगां आसा.सगळ्यांत लागीं फिरतो दवाखानो ० किमी हांगां आसा. सगळ्यांत लागीं हेर वैजकीय सुविधा ८ किमी हांगां आसा.शारांत २ खाजगी वखदां दुकान आसा.
-
-शैक्षणिक सुविधा
+== 
+'''शैक्षणिक सुविधा''' ==
 शारांत १ शासकीय प्राथमिक शाळा आसा. शारांत २ खाजगी प्राथमिक शाळा आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (फक्त वाणिज्य) MAPUSA (७ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी शास्त्र) PANAJI (१२ किमी) हांगां आसा.
