--- a/शेळवण.mw
+++ b/शेळवण.mw
@@ -169,3 +169,12 @@
 
 
 == शिंपणावळ सुविधा ==
+शिंपणावळ करपा खातीर स्रोत अशे आसात (क्षेत्रफळ हेक्टरांनी) :
+* कालवे: २०
+* बांयो / कूप नलिका: ०
+* तळी: ०
+* ओढे: ०
+* हेर: १०.५
+
+
+== उत्पादन ==
