/* वनस्पत आनी मोनजात */

--- a/अंदमान_आनी_निकोबार.mw
+++ b/अंदमान_आनी_निकोबार.mw
@@ -10,7 +10,7 @@
 ह्या प्रदेशाचें हवामान चडशें दमट आनी उश्ण आसता. हांगांचे तापमान चडांतचड 20 ते 30 से. आनी उण्यांत उणें 24 ते 25 से. आसता. नैऋत्य आनी ईशान्य मौसमी वाऱ्या खातीर ह्या जुंव्याचेर वर्सूय भर पावस आसता. हांगा पावसाचें प्रमाण 312 सेंमी. आसा आनी दक्षिणे कडल्यान उत्तरेकडेन हें प्रमाम उणें जायत वता. वर्सूय भर हांगा भरपूर वारें आसून कांय दीस वादळी वारेंय व्हांवता.
 
 == '''वनस्पत आनी मोनजात''' ==
-अंदमान आनी निकोबार प्रदेशाच्या जमनीचो 77% वाठार रानान भरिल्लो आसा. अंदमानांतल्या वनस्पतींचे तीन भाग करूं येतात. सदां पाचवीचार झाडां, पानझडी आनी दर्यादेगेवयली वनस्पत. ह्या वाठारांत पणस, नाल्ल, सुपारी, सागाच्यो तरेकवार जाती, शिशें सॅटीनवूड, कोको आनी जायते तरेची झाडां आसात. हांगांची रानांतली संपत्ती भारतीय अर्थकारणाच्या परकीय चलन मेळोवपाचे नदरेन खूब म्हत्वाची आसा. हांगां खूब कडेन एकेच तरेची झाडां मेळिल्ल्यान वेपारी नदरेन उपाट फायदो जाता. प्लायवूड आनी फस्कां तयार करपाच्या लांकडांचीं झाडां हांगाच्या रानांनी भरपूर मेळटात. निकोबारांत नाल्ल, सुपारी, ताडरूख आनी मदेराक उपेगी पडपी लाकूड मेळटा.
+अंदमान आनी निकोबार प्रदेशाच्या जमनीचो 77 टक्के वाठार रानान भरिल्लो आसा. अंदमानांतल्या वनस्पतींचे तीन भाग करूं येतात. सदां पाचवीचार झाडां, पानझडी आनी दर्यादेगेवयली वनस्पत. ह्या वाठारांत पणस, नाल्ल, सुपारी, सागाच्यो तरेकवार जाती, शिशें सॅटीनवूड, कोको आनी जायते तरेची झाडां आसात. हांगाची रानांतली संपत्ती भारतीय अर्थकारणाच्या परकीय चलन मेळोवपाचे नदरेन खूब म्हत्वाची आसा. हांगां खूब कडेन एकेच तरेचीं झाडां मेळिल्ल्यान वेपारी नदरेन उपाट फायदो जाता. प्लायवूड आनी फस्कां तयार करपाच्या लांकडांचीं झाडां हांगाच्या रानांनीं भरपूर मेळटात. निकोबारांत नाल्ल, सुपारी, ताडरूख आनी मदेराक उपेगी पडपी लाकूड मेळटा.
 
 अंदमान, निकोबार प्रदेशांत माकड आनी सरपटपी जीव भरपूर आसून , सोरपाच्यो वेगवेगळ्यो जाती हांगा पळोवंक मेळटात. हांगा रानदूकर, हत्ती, पाणघोडे, मानगी , कांसव असें जायते जीव-जंतू आनी सुकणीं आसात 
 
