*Empty MediaWiki Message*

--- a/साळगांव.mw
+++ b/साळगांव.mw
@@ -23,7 +23,7 @@
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (फक्त वाणिज्य) MAPUSA (७ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी शास्त्र) PANAJI (१२ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय पदवी महाविद्यालय- विद्यापीठ PANAJI (१८ किमी) हांगां आसा.
-
+सगळ्यांत लागीं खाजगी पदवी महाविद्यालय - हेर MAPUSA (७ किमी) हांगां आसा.
 
 
 
