*Empty MediaWiki Message*

--- a/साळगांव.mw
+++ b/साळगांव.mw
@@ -26,7 +26,7 @@
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय - हेर MAPUSA (७ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय वैजकी महाविद्यालय BAMBOLIM C T (१६ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय अभियांत्रिकी महाविद्यालय BANDORA C T (४० किमी) हांगां आसा.
-
+सगळ्यांत लागीं शासकीय वैवस्थापन संस्था  PENHA DE FRANCA (CT) (१० किमी) हांगां आसा.
 == '''संदर्भ''' ==
 
 
