*Empty MediaWiki Message*

--- a/पिळर्ण.mw
+++ b/पिळर्ण.mw
@@ -9,3 +9,8 @@
 * पावस (मिमी.): ३०९६.९७ 
 * कमाल तापमान (सेल्सिअस): ३१.५३
 * किमान तापमान (सेल्सिअस): २३.५१
+
+== साक्षरता ==  
+* एकूण साक्षर लोकसंख्या: ४८९१
+* साक्षर पुरुश लोकसंख्या: २५९१ (८५.६८%)
+* साक्षर स्त्री लोकसंख्या: २३०० (८२.०५%)
