/* वनस्पत आनी मोनजात */

--- a/अंदमान_आनी_निकोबार.mw
+++ b/अंदमान_आनी_निकोबार.mw
@@ -12,9 +12,9 @@
 == '''वनस्पत आनी मोनजात''' ==
 अंदमान आनी निकोबार प्रदेशाच्या जमनीचो 77 टक्के वाठार रानान भरिल्लो आसा. अंदमानांतल्या वनस्पतींचे तीन भाग करूं येतात. सदां पाचवीचार झाडां, पानझडी आनी दर्यादेगेवयली वनस्पत. ह्या वाठारांत पणस, नाल्ल, सुपारी, सागाच्यो तरेकवार जाती, शिशें सॅटीनवूड, कोको आनी जायते तरेची झाडां आसात. हांगाची रानांतली संपत्ती भारतीय अर्थकारणाच्या परकीय चलन मेळोवपाचे नदरेन खूब म्हत्वाची आसा. हांगां खूब कडेन एकेच तरेचीं झाडां मेळिल्ल्यान वेपारी नदरेन उपाट फायदो जाता. प्लायवूड आनी फस्कां तयार करपाच्या लांकडांचीं झाडां हांगाच्या रानांनीं भरपूर मेळटात. निकोबारांत नाल्ल, सुपारी, ताडरूख आनी मदेराक उपेगी पडपी लाकूड मेळटा.
 
-अंदमान, निकोबार प्रदेशांत माकड आनी सरपटपी जीव भरपूर आसून , सोरपाच्यो वेगवेगळ्यो जाती हांगा पळोवंक मेळटात. हांगा रानदूकर, हत्ती, पाणघोडे, मानगी , कांसव अशे जायते जीव-जंतू आनी सुकणीं आसात 
+अंदमान, निकोबार प्रदेशांत माकड आनी सरपटपी जीव भरपूर आसून , सोरपाच्यो वेगवेगळ्यो जाती हांगा पळोवंक मेळटात. हांगा रानदूकर, हत्ती, पाणघोडे, मानगी , कांसव अशे जायते जीव-जंतू आनी सुकणीं आसात. 
 
-ब्लेअर ङांगा आसा. अंदमानांत ग्रामपंचायती आनी न्यायपंचायती आसात. निकोबारंत पंचायत वेवस्था परंपरे प्रमाण चलता. ह्या प्रदेशांत एक प्रशासक , अधिकाऱ्यांच्या आदारान जुंव्याचो कारभार पळयता. निकोबार जुंव्या खातीर पालवी अधिकारी आसता. 1967 वर्सा सावन राष्ट्रपतीन वेंचून काडिल्लो एक प्रतिनिधी लोकसभेंत आसता. हांगाच्या प्रशासकाच्या शिफारसी प्रमाण थळाव्या स्वराज्य संस्थेचो प्रतिनिधी वेंचून काडटात.
+ब्लेअर ङांगा आसा. अंदमानांत ग्रामपंचायती आनी न्यायपंचायती आसात. निकोबारांत पंचायत वेवस्था परंपरे प्रमाण चलता. ह्या प्रदेशांत एक प्रशासक , अधिकाऱ्यांच्या आदारान जुंव्याचो कारभार पळयता. निकोबार जुंव्या खातीर पालवी अधिकारी आसता. 1967 वर्सा सावन राष्ट्रपतीन वेंचून काडिल्लो एक प्रतिनिधी लोकसभेंत आसता. हांगाच्या प्रशासकाच्या शिफारसी प्रमाण थळाव्या स्वराज्य संस्थेचो प्रतिनिधी वेंचून काडटात.
 
 == '''आर्थीक स्थिती''' ==
 अंदमान आनी निकोबार प्रदेशाचो 77% वाठार रानान व्यापिल्लो आसा. कांय कडेन पावसाच्या परिणामाक लागून ‘जांभ्या’ ह्या फातरा पासून तयार जाल्ली जमीन आसा. हाका लागून खुबूच उण्या प्रमाणांत जमीन शेतां खातीर मेळटा. ह्या प्रदेशाच्या 7441 हॅक्टर सुवातीर भाताचें पीक काडटात. नाल्ल आनी भात ही हांगाचीं दोन मुखेल पिकां. हांगाचो मुखेल वेपार लाकूड आनी नाल्ला वरवीं जाता. पोर्ट ब्लेअराक लाकूड कापपाची बंगसाळ, फस्कां आनी प्लायवूड तयार करपाचे कारखाने आसात. ते भायर दर्या देगेर नुस्तें मारप, शंख शिंपयो एकठांय करप, कांसव धरप, आदी उद्देग थंय चलतात.
