--- a/शिरदोण.mw
+++ b/शिरदोण.mw
@@ -42,3 +42,5 @@
 शिरदोण ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
 रान : ०
 शेतकामा खातीर ना वापरिल्ली जमीन: ५००.४३
+ओसाड आनी लागवड ना केल्ली जमीन: ०
+कुरणे आनी अन्य मळ: ०
