*Empty MediaWiki Message*

--- a/साळगांव.mw
+++ b/साळगांव.mw
@@ -30,7 +30,7 @@
 सगळ्यांत लागीं शासकीय पॉलिटेक्निक PANAJI (११ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय वेवसायीक प्रशिक्षण शाळा MAPUSA (७ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय अनौपचारीक प्रशिक्षणकेंद्र  MAPUSA (७ किमी) हांगां आसा.
-
+सगळ्यांत लागीं शासकीय अपंगां खातीर खाशेली शाळा PENHA DE FRANCA C T (१० किमी) हांगां आसा.
 
 
 
