*Empty MediaWiki Message*

--- a/मडकय.mw
+++ b/मडकय.mw
@@ -3,7 +3,7 @@
 लोकसंख्योप्रमाणे शाराचो दर्जो V (लोकसंख्या_एकूण ५,००० to ९,९९९).
 शाराची नागरी स्थीती आसा. 'सर्वेक्षण शार'.
 
-१  लाखां परस चड लोकसंख्या आशिल्लें सगळ्यांत लागींचें बेळगांव हें शार १३९ किमी अंतराचेर आसा. ५  लाखां परस चड लोकसंख्या आशिल्लें सगळ्यांत लागींचें PUNE हें शार ५१३ किमी अंतराचेर आसा. रेल्व स्टेशन १५ किमी अंतराचेर CARAMBOLIM हांगां आसा.
+१  लाखां परस चड लोकसंख्या आशिल्लें सगळ्यांत लागींचें बेळगांव हें शार १३९ किमी अंतराचेर आसा. ५  लाखां परस चड लोकसंख्या आशिल्लें सगळ्यांत लागींचें PUNE हें शार ५१३ किमी अंतराचेर आसा. रेल्व स्टेशन १५ किमी अंतराचेर करमळे हांगां आसा.
 
 
 == हवामान ==  
@@ -14,8 +14,8 @@
 
 == साक्षरता ==  
 * एकूण साक्षर लोकसंख्या: ४९६७
-* साक्षर पुरुश लोकसंख्या: २७१७ (८६.४५%)
-* साक्षर स्त्री लोकसंख्या: २२५० (७३.२४%)
+* साक्षर दादल्यांची लोकसंख्या: २७१७ (८६.४५%)
+* साक्षर बायलांची लोकसंख्या: २२५० (७३.२४%)
 
 
 == नितळसाण आनी पिवपाचें उदक ==  
