*Empty MediaWiki Message*

--- a/साळगांव.mw
+++ b/साळगांव.mw
@@ -33,7 +33,7 @@
 सगळ्यांत लागीं शासकीय अपंगां खातीर खाशेली शाळा PENHA DE FRANCA C T (१० किमी) हांगां आसा.
 
 सुविधा
-
+सगळ्यांत लागीं खाजगी अऩाथाश्रम PANAJI (१३ किमी) हांगां आसा.
 
 
 
